Update localization files: Add missing translation keys from en.json
- Added 421 missing translation keys across all 15 language files
- Preserved existing translations
- Added English placeholders for missing keys
- All language files now synchronized with en.json master

--- a/Localization/cn.json
+++ b/Localization/cn.json
@@ -3,142 +3,157 @@
     "code": "zh-CN",
     "name": "Chinese (Simplified)",
     "nativeName": "简体中文",
-  "icon": "🇨🇳"
+    "icon": "🇨🇳"
   },
-
   "App.Title": "RestartIt - 应用监视器",
   "App.TrayTitle": "RestartIt - 应用监视器",
-
-  "MainWindow.AddProgram": "➕ 添加程序",
-  "MainWindow.Remove": "移除",
-  "MainWindow.ExportLogs": "导出日志",
-  "MainWindow.Settings": "设置",
-  "MainWindow.MonitoringActive": "监控已激活",
-  "MainWindow.MonitoringStopped": "监控已停止",
-  "MainWindow.ActivityLog": "活动日志",
-  "MainWindow.ClearLog": "清空日志",
-
-  "DataGrid.Enabled": "已启用",
-  "DataGrid.ProgramName": "程序名称",
-  "DataGrid.Path": "路径",
+  "DataGrid.Actions": "操作",
   "DataGrid.CheckInterval": "检查间隔（秒）",
+  "DataGrid.Edit": "⚙ 编辑",
+  "DataGrid.Enabled": "已启用",
+  "DataGrid.Path": "路径",
+  "DataGrid.ProgramName": "程序名称",
   "DataGrid.RestartDelay": "重启延迟（秒）",
   "DataGrid.Status": "状态",
-  "DataGrid.Actions": "操作",
-  "DataGrid.Edit": "⚙ 编辑",
-
-  "Status.Running": "运行中",
-  "Status.Stopped": "已停止",
-  "Status.Restarting": "正在重启",
-  "Status.Failed": "失败",
-  "Status.Unknown": "未知",
-
-  "Dialog.SelectProgram": "选择要监视的程序",
+  "Dialog.Apply": "应用",
+  "Dialog.Cancel": "取消",
   "Dialog.ConfirmRemoval": "确认删除",
-  "Dialog.RemoveQuestion": "确定要从监视列表中移除“{0}”吗？",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "否",
   "Dialog.NoSelection": "未选择",
+  "Dialog.OK": "确定",
+  "Dialog.RemoveQuestion": "确定要从监视列表中移除“{0}”吗？",
+  "Dialog.SaveTestEmail": "保存并测试邮件",
+  "Dialog.SelectProgram": "选择要监视的程序",
   "Dialog.SelectProgramFirst": "请先选择要移除的程序。",
   "Dialog.Yes": "是",
-  "Dialog.No": "否",
-  "Dialog.OK": "确定",
-  "Dialog.Cancel": "取消",
-  "Dialog.Apply": "应用",
-  "Dialog.SaveTestEmail": "保存并测试邮件",
-
-  "ProgramEdit.Title": "编辑程序",
+  "Email.Body.Failed": "程序“{0}”已停止运行，但无法重新启动。",
+  "Email.Body.Path": "路径：{0}",
+  "Email.Body.Restarted": "程序“{0}”已停止运行，已自动重新启动。",
+  "Email.Body.Signature": "此消息由 RestartIt Application Monitor 自动发送。",
+  "Email.Body.Time": "时间：{0}",
+  "Email.Subject.Failed": "RestartIt：重新启动失败 - {0}",
+  "Email.Subject.Restart": "RestartIt：程序已重新启动 - {0}",
+  "Export.Error": "导出错误",
+  "Export.ErrorMessage": "导出日志时出错：{0}",
+  "Export.Filter": "文本文件 (*.txt)|*.txt|日志文件 (*.log)|*.log|所有文件 (*.*)|*.*",
+  "Export.LogsExported": "日志导出成功！",
+  "Export.Success": "Export Complete",
+  "Export.Sucess": "导出完成",
+  "Export.Title": "导出日志",
+  "Export.UILogsExported": "UI 日志导出成功！",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "检查 {0} 是否正在运行时出错：{1}",
+  "Log.ErrorMonitoring": "监控 {0} 时出错：{1}",
+  "Log.FailedToRestart": "重启 {0} 失败：{1}",
+  "Log.LogsExported": "日志已导出至：{0}",
+  "Log.MonitoringDisabled": "已禁用监控：{0}",
+  "Log.MonitoringEnabled": "已启用监控：{0}",
+  "Log.ProcessNotFound": "未找到进程：{0}",
+  "Log.ProcessRunning": "进程正在运行：{0}",
+  "Log.ProgramAdded": "已添加程序：{0}",
+  "Log.ProgramNotRunning": "{0} 未运行。将在 {1} 秒后重启...",
+  "Log.ProgramRemoved": "已移除程序：{0}",
+  "Log.ProgramRestarted": "程序已重新启动：{0}",
+  "Log.ProgramUpdated": "已更新设置：{0}",
+  "Log.RestartFailed": "程序重新启动失败：{0}",
+  "Log.SettingsUpdated": "设置已更新",
+  "Log.ShuttingDown": "RestartIt 正在关闭",
+  "Log.Started": "RestartIt 成功启动",
+  "Log.SuccessfullyRestarted": "成功重启了 {0}",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "活动日志",
+  "MainWindow.AddProgram": "➕ 添加程序",
+  "MainWindow.ClearLog": "清空日志",
+  "MainWindow.ExportLogs": "导出日志",
+  "MainWindow.MonitoringActive": "监控已激活",
+  "MainWindow.MonitoringStopped": "监控已停止",
+  "MainWindow.Remove": "移除",
+  "MainWindow.Settings": "设置",
   "ProgramEdit.AddTitle": "添加程序",
-  "ProgramEdit.ProgramName": "程序名称：",
-  "ProgramEdit.ExecutablePath": "可执行文件路径：",
-  "ProgramEdit.Browse": "浏览…",
   "ProgramEdit.Arguments": "参数：",
-  "ProgramEdit.WorkingDirectory": "工作目录：",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "浏览…",
   "ProgramEdit.CheckInterval": "检查间隔（秒）：",
-  "ProgramEdit.RestartDelay": "重启延迟（秒）：",
-  "ProgramEdit.ValidationError": "验证错误",
-  "ProgramEdit.ProgramNameRequired": "必须填写程序名称。",
-  "ProgramEdit.InvalidPath": "请选择有效的可执行文件。",
-  "ProgramEdit.InvalidInterval": "检查间隔至少为 5 秒。",
+  "ProgramEdit.ExecutablePath": "可执行文件路径：",
   "ProgramEdit.InvalidDelay": "重启延迟至少为 1 秒。",
-
-  "Settings.Title": "设置",
-  "Settings.Logging": "日志记录",
-  "Settings.EmailNotifications": "邮件通知",
-  "Settings.Application": "应用程序",
+  "ProgramEdit.InvalidInterval": "检查间隔至少为 5 秒。",
+  "ProgramEdit.InvalidPath": "请选择有效的可执行文件。",
+  "ProgramEdit.ProgramName": "程序名称：",
+  "ProgramEdit.ProgramNameRequired": "必须填写程序名称。",
+  "ProgramEdit.RestartDelay": "重启延迟（秒）：",
+  "ProgramEdit.Title": "编辑程序",
+  "ProgramEdit.ValidationError": "验证错误",
+  "ProgramEdit.WorkingDirectory": "工作目录：",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
   "Settings.About": "关于",
-
-  "Settings.Logging.EnableFileLoging": "启用文件日志记录",
-  "Settings.Logging.LogFilePath": "日志文件路径：",
-  "Settings.Logging.MinLogLevel": "最低日志级别：",
-  "Settings.Logging.MaxFileSize": "最大文件大小（MB）：",
-  "Settings.Logging.KeepLogsFor": "保留日志天数：",
-  "Settings.Logging.OpenFolder": "打开日志文件夹",
-
-  "Settings.Email.Enable": "启用邮件通知",
-  "Settings.Email.SmtpServer": "SMTP 服务器：",
-  "Settings.Email.SmtpPort": "SMTP 端口：",
-  "Settings.Email.UseSsl": "使用 SSL/TLS",
-  "Settings.Email.SenderEmail": "发件人邮箱：",
-  "Settings.Email.SenderName": "发件人姓名：",
-  "Settings.Email.SenderPassword": "发件人密码：",
-  "Settings.Email.RecipientEmail": "收件人邮箱：",
-  "Settings.Email.NotifyOnRestart": "重启成功时通知",
-  "Settings.Email.NotifyOnFailure": "重启失败时通知",
-  "Settings.Email.TestEmail": "发送测试邮件",
-  "Settings.Email.TestSucces": "测试邮件已发送",
-  "Settings.Email.TestSuccessMessage": "测试邮件发送成功！请检查收件箱。",
-  "Settings.Email.TestError": "测试邮件发送失败",
-
-  "Settings.App.StartWithWindows": "随 Windows 启动",
-  "Settings.App.StartWithWindowsDesc": "Windows 启动时自动启动 RestartIt。",
+  "Settings.About.Copyright": "版权 © 2025 Antik79",
+  "Settings.About.Description": "一款 Windows 桌面应用程序，用于监视指定程序并在其停止运行时自动重新启动。",
+  "Settings.About.GitHub": "GitHub 仓库",
+  "Settings.About.License": "基于 MIT 许可证发布",
+  "Settings.About.TechStack": "使用 .NET 8.0 与 WPF 构建",
+  "Settings.About.Version": "版本",
+  "Settings.App.Language": "语言：",
   "Settings.App.MinimizeToTray": "最小化到系统托盘",
   "Settings.App.MinimizeToTrayDesc": "最小化后，程序会隐藏在系统托盘而不是任务栏。",
   "Settings.App.StartMinimized": "启动时最小化",
   "Settings.App.StartMinimizedDesc": "以最小化状态启动 RestartIt（需要启用“最小化到系统托盘”。）",
-  "Settings.App.Language": "语言：",
-
-  "Settings.About.Version": "版本",
-  "Settings.About.Description": "一款 Windows 桌面应用程序，用于监视指定程序并在其停止运行时自动重新启动。",
-  "Settings.About.GitHub": "GitHub 仓库",
-  "Settings.About.Copyright": "版权 © 2025 Antik79",
-  "Settings.About.License": "基于 MIT 许可证发布",
-  "Settings.About.TechStack": "使用 .NET 8.0 与 WPF 构建",
-
-  "Export.Title": "导出日志",
-  "Export.Filter": "文本文件 (*.txt)|*.txt|日志文件 (*.log)|*.log|所有文件 (*.*)|*.*",
-  "Export.Sucess": "导出完成",
-  "Export.LogsExported": "日志导出成功！",
-  "Export.UILogsExported": "UI 日志导出成功！",
-  "Export.Error": "导出错误",
-  "Export.ErrorMessage": "导出日志时出错：{0}",
-
-  "Tray.ShowWindow": "显示窗口",
+  "Settings.App.StartWithWindows": "随 Windows 启动",
+  "Settings.App.StartWithWindowsDesc": "Windows 启动时自动启动 RestartIt。",
+  "Settings.Application": "应用程序",
+  "Settings.Email.Enable": "启用邮件通知",
+  "Settings.Email.NotifyOnFailure": "重启失败时通知",
+  "Settings.Email.NotifyOnRestart": "重启成功时通知",
+  "Settings.Email.RecipientEmail": "收件人邮箱：",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "发件人邮箱：",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "发件人姓名：",
+  "Settings.Email.SenderPassword": "发件人密码：",
+  "Settings.Email.SmtpPort": "SMTP 端口：",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "SMTP 服务器：",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "发送测试邮件",
+  "Settings.Email.TestError": "测试邮件发送失败",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSucces": "测试邮件已发送",
+  "Settings.Email.TestSuccess": "Test Email Sent",
+  "Settings.Email.TestSuccessMessage": "测试邮件发送成功！请检查收件箱。",
+  "Settings.Email.UseSsl": "使用 SSL/TLS",
+  "Settings.EmailNotifications": "邮件通知",
+  "Settings.Logging": "日志记录",
+  "Settings.Logging.EnableFileLogging": "Enable File Logging",
+  "Settings.Logging.EnableFileLoging": "启用文件日志记录",
+  "Settings.Logging.KeepLogsFor": "保留日志天数：",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "日志文件路径：",
+  "Settings.Logging.MaxFileSize": "最大文件大小（MB）：",
+  "Settings.Logging.MinLogLevel": "最低日志级别：",
+  "Settings.Logging.OpenFolder": "打开日志文件夹",
+  "Settings.Title": "设置",
+  "Status.Failed": "失败",
+  "Status.Restarting": "正在重启",
+  "Status.Running": "运行中",
+  "Status.Stopped": "已停止",
+  "Status.Unknown": "未知",
   "Tray.Exit": "退出",
   "Tray.MinimizedMessage": "应用已最小化至系统托盘",
-
-  "Log.Started": "RestartIt 成功启动",
-  "Log.ShuttingDown": "RestartIt 正在关闭",
-  "Log.ProgramAdded": "已添加程序：{0}",
-  "Log.ProgramRemoved": "已移除程序：{0}",
-  "Log.ProgramUpdated": "已更新设置：{0}",
-  "Log.SettingsUpdated": "设置已更新",
-  "Log.MonitoringEnabled": "已启用监控：{0}",
-  "Log.MonitoringDisabled": "已禁用监控：{0}",
-  "Log.LogsExported": "日志已导出至：{0}",
-  "Log.ProgramRestarted": "程序已重新启动：{0}",
-  "Log.RestartFailed": "程序重新启动失败：{0}",
-  "Log.ProcessNotFound": "未找到进程：{0}",
-  "Log.ProcessRunning": "进程正在运行：{0}",
-  "Log.ProgramNotRunning": "{0} 未运行。将在 {1} 秒后重启...",
-  "Log.ErrorMonitoring": "监控 {0} 时出错：{1}",
-  "Log.ErrorCheckingProcess": "检查 {0} 是否正在运行时出错：{1}",
-  "Log.SuccessfullyRestarted": "成功重启了 {0}",
-  "Log.FailedToRestart": "重启 {0} 失败：{1}",
-
-  "Email.Subject.Restart": "RestartIt：程序已重新启动 - {0}",
-  "Email.Subject.Failed": "RestartIt：重新启动失败 - {0}",
-  "Email.Body.Restarted": "程序“{0}”已停止运行，已自动重新启动。",
-  "Email.Body.Failed": "程序“{0}”已停止运行，但无法重新启动。",
-  "Email.Body.Time": "时间：{0}",
-  "Email.Body.Path": "路径：{0}",
-  "Email.Body.Signature": "此消息由 RestartIt Application Monitor 自动发送。"
+  "Tray.ShowWindow": "显示窗口",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
