--- a/Localization/da.json
+++ b/Localization/da.json
@@ -1,144 +1,156 @@
 {
   "_metadata": {
-  "code": "da",
+    "code": "da",
     "name": "Danish",
     "nativeName": "Dansk",
     "icon": "🇩🇰"
   },
-
   "App.Title": "RestartIt - Programovervågning",
   "App.TrayTitle": "RestartIt - Programovervågning",
-
-  "MainWindow.AddProgram": "➕ Tilføj program",
-  "MainWindow.Remove": "Fjern",
-  "MainWindow.ExportLogs": "Eksporter logfiler",
-  "MainWindow.Settings": "Indstilinger",
-  "MainWindow.MonitoringActive": "Overvågning aktiv",
-  "MainWindow.MonitoringStopped": "Overvågning stoppet",
-  "MainWindow.ActivityLog": "Aktivitetslog",
-  "MainWindow.ClearLog": "Ryd log",
-
-  "DataGrid.Enabled": "Aktiveret",
-  "DataGrid.ProgramName": "Programnavn",
-  "DataGrid.Path": "Sti",
+  "DataGrid.Actions": "Handlinger",
   "DataGrid.CheckInterval": "Kontrolinterval (sek)",
+  "DataGrid.Edit": "⚙ Rediger",
+  "DataGrid.Enabled": "Aktiveret",
+  "DataGrid.Path": "Sti",
+  "DataGrid.ProgramName": "Programnavn",
   "DataGrid.RestartDelay": "Genstartforsinkelse (sek)",
   "DataGrid.Status": "Status",
-  "DataGrid.Actions": "Handlinger",
-  "DataGrid.Edit": "⚙ Rediger",
-
-  "Status.Running": "Kører",
-  "Status.Stopped": "Stoppet",
-  "Status.Restarting": "Genstarter",
-  "Status.Failed": "Mislykket",
-  "Status.Unknown": "Ukendt",
-
-  "Dialog.SelectProgram": "Vælg program der skal overvåges",
+  "Dialog.Apply": "Anvend",
+  "Dialog.Cancel": "Annuller",
   "Dialog.ConfirmRemoval": "Bekræft fjernelse",
-  "Dialog.RemoveQuestion": "Er du sikker på, at du vil fjerne “{0}” fra overvågningen?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Nej",
   "Dialog.NoSelection": "Ingen markering",
+  "Dialog.OK": "OK",
+  "Dialog.RemoveQuestion": "Er du sikker på, at du vil fjerne “{0}” fra overvågningen?",
+  "Dialog.SaveTestEmail": "Gem og test e‑mail",
+  "Dialog.SelectProgram": "Vælg program der skal overvåges",
   "Dialog.SelectProgramFirst": "Vælg venligst et program, der skal fjernes.",
   "Dialog.Yes": "Ja",
-  "Dialog.No": "Nej",
-  "Dialog.OK": "OK",
-  "Dialog.Cancel": "Annuller",
-  "Dialog.Apply": "Anvend",
-  "Dialog.SaveTestEmail": "Gem og test e‑mail",
-
-  "ProgramEdit.Title": "Rediger program",
+  "Email.Body.Failed": "Programmet “{0}” stoppede, men kunne ikke genstartes.",
+  "Email.Body.Path": "Sti: {0}",
+  "Email.Body.Restarted": "Programmet “{0}” stoppede, og blev automatisk genstartet.",
+  "Email.Body.Signature": "Dette er en automatisk besked fra RestartIt Application Monitor.",
+  "Email.Body.Time": "Tidspunkt: {0}",
+  "Email.Subject.Failed": "RestartIt: Genstart mislykkedes – {0}",
+  "Email.Subject.Restart": "RestartIt: Program genstartet – {0}",
+  "Export.Error": "Eksportfejl",
+  "Export.ErrorMessage": "Fejl ved eksport af logfiler: {0}",
+  "Export.Filter": "Tekstfiler (*.txt)|*.txt|Logfiler (*.log)|*.log|Alle filer (*.*)|*.*",
+  "Export.LogsExported": "Logfiler eksporteret med succes!",
+  "Export.Success": "Eksport fuldført",
+  "Export.Title": "Eksporter logfiler",
+  "Export.UILogsExported": "UI‑logfiler eksporteret med succes!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Fejl ved kontrol af om {0} kører: {1}",
+  "Log.ErrorMonitoring": "Fejl ved overvågning af {0}: {1}",
+  "Log.FailedToRestart": "Kunne ikke genstarte {0}: {1}",
+  "Log.LogsExported": "Logfiler eksporteret til: {0}",
+  "Log.MonitoringDisabled": "Overvågning deaktiveret for: {0}",
+  "Log.MonitoringEnabled": "Overvågning aktiveret for: {0}",
+  "Log.ProcessNotFound": "Proces ikke fundet: {0}",
+  "Log.ProcessRunning": "Proces kører: {0}",
+  "Log.ProgramAdded": "Program tilføjet: {0}",
+  "Log.ProgramNotRunning": "{0} kører ikke. Genstarter om {1} sekunder...",
+  "Log.ProgramRemoved": "Program fjernet: {0}",
+  "Log.ProgramRestarted": "Program genstartet: {0}",
+  "Log.ProgramUpdated": "Indstillinger opdateret for: {0}",
+  "Log.RestartFailed": "Kunne ikke genstarte program: {0}",
+  "Log.SettingsUpdated": "Indstillinger opdateret",
+  "Log.ShuttingDown": "RestartIt lukker ned",
+  "Log.Started": "RestartIt startede korrekt",
+  "Log.SuccessfullyRestarted": "Genstartet {0} korrekt",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Aktivitetslog",
+  "MainWindow.AddProgram": "➕ Tilføj program",
+  "MainWindow.ClearLog": "Ryd log",
+  "MainWindow.ExportLogs": "Eksporter logfiler",
+  "MainWindow.MonitoringActive": "Overvågning aktiv",
+  "MainWindow.MonitoringStopped": "Overvågning stoppet",
+  "MainWindow.Remove": "Fjern",
+  "MainWindow.Settings": "Indstilinger",
   "ProgramEdit.AddTitle": "Tilføj program",
-  "ProgramEdit.ProgramName": "Programnavn:",
-  "ProgramEdit.ExecutablePath": "Kørbar sti:",
-  "ProgramEdit.Browse": "Gennemse...",
   "ProgramEdit.Arguments": "Argumenter:",
-  "ProgramEdit.WorkingDirectory": "Arbejdsmappe:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Gennemse...",
   "ProgramEdit.CheckInterval": "Kontrolinterval (sekunder):",
-  "ProgramEdit.RestartDelay": "Genstartforsinkelse (sekunder):",
-  "ProgramEdit.ValidationError": "Valideringsfejl",
-  "ProgramEdit.ProgramNameRequired": "Programnavn er påkrævet.",
-  "ProgramEdit.InvalidPath": "Vælg en gyldig eksekverbar fil.",
-  "ProgramEdit.InvalidInterval": "Kontrolintervallet skal være mindst 5 sekunder.",
+  "ProgramEdit.ExecutablePath": "Kørbar sti:",
   "ProgramEdit.InvalidDelay": "Genstartforsinkelsen skal være mindst 1 sekund.",
-
-  "Settings.Title": "Indstillinger",
-  "Settings.Logging": "Logning",
-  "Settings.EmailNotifications": "E‑mail‑meddelelser",
-  "Settings.Application": "Applikation",
+  "ProgramEdit.InvalidInterval": "Kontrolintervallet skal være mindst 5 sekunder.",
+  "ProgramEdit.InvalidPath": "Vælg en gyldig eksekverbar fil.",
+  "ProgramEdit.ProgramName": "Programnavn:",
+  "ProgramEdit.ProgramNameRequired": "Programnavn er påkrævet.",
+  "ProgramEdit.RestartDelay": "Genstartforsinkelse (sekunder):",
+  "ProgramEdit.Title": "Rediger program",
+  "ProgramEdit.ValidationError": "Valideringsfejl",
+  "ProgramEdit.WorkingDirectory": "Arbejdsmappe:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
   "Settings.About": "Om",
-
-  "Settings.Logging.EnableFileLogging": "Aktiver fillogning",
-  "Settings.Logging.LogFilePath": "Logfilsti:",
-  "Settings.Logging.MinLogLevel": "Minimum logniveau:",
-  "Settings.Logging.MaxFileSize": "Maksimal filstørrelse (MB):",
-  "Settings.Logging.KeepLogsFor": "Bevar logfiler i (dage):",
-  "Settings.Logging.OpenFolder": "Åbn logmappe",
-
-  "Settings.Email.Enable": "Aktiver e‑mail‑meddelelser",
-  "Settings.Email.SmtpServer": "SMTP‑server:",
-  "Settings.Email.SmtpPort": "SMTP‑port:",
-  "Settings.Email.UseSsl": "Brug SSL/TLS",
-  "Settings.Email.SenderEmail": "Afsender‑e‑mail:",
-  "Settings.Email.SenderName": "Afsendernavn:",
-  "Settings.Email.SenderPassword": "Afsenderadgangskode:",
-  "Settings.Email.RecipientEmail": "Modtager‑e‑mail:",
-  "Settings.Email.NotifyOnRestart": "Underret ved vellykket genstart",
-  "Settings.Email.NotifyOnFailure": "Underret ved mislykket genstart",
-  "Settings.Email.TestEmail": "Send test‑e‑mail",
-  "Settings.Email.TestSuccess": "Test‑e‑mail sendt",
-  "Settings.Email.TestSuccessMessage": "Test‑e‑mail blev sendt med succes! Tjek din indbakke.",
-  "Settings.Email.TestError": "Test‑e‑mail mislykkedes",
-
-  "Settings.App.StartWithWindows": "Start med Windows",
-  "Settings.App.StartWithWindowsDesc": "Start RestartIt automatisk, når Windows starter.",
+  "Settings.About.Copyright": "© 2025 Antik79",
+  "Settings.About.Description": "Et Windows‑desktopprogram, der overvåger angivne programmer og automatisk genstarter dem, hvis de stopper med at køre.",
+  "Settings.About.GitHub": "GitHub‑repository",
+  "Settings.About.License": "Licenseret under MIT‑licensen",
+  "Settings.About.TechStack": "Bygget med .NET 8.0 og WPF",
+  "Settings.About.Version": "Version",
+  "Settings.App.Language": "Sprog:",
   "Settings.App.MinimizeToTray": "Minimér til systembakken",
   "Settings.App.MinimizeToTrayDesc": "Når programmet minimeres, gemmes det i systembakken i stedet for proceslinjen.",
   "Settings.App.StartMinimized": "Start minimeret",
   "Settings.App.StartMinimizedDesc": "Start RestartIt minimeret til systembakken (kræver at “Minimér til systembakken” er aktiveret).",
-  "Settings.App.Language": "Sprog:",
-
-  "Settings.About.Version": "Version",
-  "Settings.About.Description": "Et Windows‑desktopprogram, der overvåger angivne programmer og automatisk genstarter dem, hvis de stopper med at køre.",
-  "Settings.About.GitHub": "GitHub‑repository",
-  "Settings.About.Copyright": "© 2025 Antik79",
-  "Settings.About.License": "Licenseret under MIT‑licensen",
-  "Settings.About.TechStack": "Bygget med .NET 8.0 og WPF",
-
-  "Export.Title": "Eksporter logfiler",
-  "Export.Filter": "Tekstfiler (*.txt)|*.txt|Logfiler (*.log)|*.log|Alle filer (*.*)|*.*",
-  "Export.Success": "Eksport fuldført",
-  "Export.LogsExported": "Logfiler eksporteret med succes!",
-  "Export.UILogsExported": "UI‑logfiler eksporteret med succes!",
-  "Export.Error": "Eksportfejl",
-  "Export.ErrorMessage": "Fejl ved eksport af logfiler: {0}",
-
-  "Tray.ShowWindow": "Vis vindue",
+  "Settings.App.StartWithWindows": "Start med Windows",
+  "Settings.App.StartWithWindowsDesc": "Start RestartIt automatisk, når Windows starter.",
+  "Settings.Application": "Applikation",
+  "Settings.Email.Enable": "Aktiver e‑mail‑meddelelser",
+  "Settings.Email.NotifyOnFailure": "Underret ved mislykket genstart",
+  "Settings.Email.NotifyOnRestart": "Underret ved vellykket genstart",
+  "Settings.Email.RecipientEmail": "Modtager‑e‑mail:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Afsender‑e‑mail:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Afsendernavn:",
+  "Settings.Email.SenderPassword": "Afsenderadgangskode:",
+  "Settings.Email.SmtpPort": "SMTP‑port:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "SMTP‑server:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Send test‑e‑mail",
+  "Settings.Email.TestError": "Test‑e‑mail mislykkedes",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Test‑e‑mail sendt",
+  "Settings.Email.TestSuccessMessage": "Test‑e‑mail blev sendt med succes! Tjek din indbakke.",
+  "Settings.Email.UseSsl": "Brug SSL/TLS",
+  "Settings.EmailNotifications": "E‑mail‑meddelelser",
+  "Settings.Logging": "Logning",
+  "Settings.Logging.EnableFileLogging": "Aktiver fillogning",
+  "Settings.Logging.KeepLogsFor": "Bevar logfiler i (dage):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Logfilsti:",
+  "Settings.Logging.MaxFileSize": "Maksimal filstørrelse (MB):",
+  "Settings.Logging.MinLogLevel": "Minimum logniveau:",
+  "Settings.Logging.OpenFolder": "Åbn logmappe",
+  "Settings.Title": "Indstillinger",
+  "Status.Failed": "Mislykket",
+  "Status.Restarting": "Genstarter",
+  "Status.Running": "Kører",
+  "Status.Stopped": "Stoppet",
+  "Status.Unknown": "Ukendt",
   "Tray.Exit": "Afslut",
   "Tray.MinimizedMessage": "Programmet er minimeret til systembakken",
-
-  "Log.Started": "RestartIt startede korrekt",
-  "Log.ShuttingDown": "RestartIt lukker ned",
-  "Log.ProgramAdded": "Program tilføjet: {0}",
-  "Log.ProgramRemoved": "Program fjernet: {0}",
-  "Log.ProgramUpdated": "Indstillinger opdateret for: {0}",
-  "Log.SettingsUpdated": "Indstillinger opdateret",
-  "Log.MonitoringEnabled": "Overvågning aktiveret for: {0}",
-  "Log.MonitoringDisabled": "Overvågning deaktiveret for: {0}",
-  "Log.LogsExported": "Logfiler eksporteret til: {0}",
-  "Log.ProgramRestarted": "Program genstartet: {0}",
-  "Log.RestartFailed": "Kunne ikke genstarte program: {0}",
-  "Log.ProcessNotFound": "Proces ikke fundet: {0}",
-  "Log.ProcessRunning": "Proces kører: {0}",
-  "Log.ProgramNotRunning": "{0} kører ikke. Genstarter om {1} sekunder...",
-  "Log.ErrorMonitoring": "Fejl ved overvågning af {0}: {1}",
-  "Log.ErrorCheckingProcess": "Fejl ved kontrol af om {0} kører: {1}",
-  "Log.SuccessfullyRestarted": "Genstartet {0} korrekt",
-  "Log.FailedToRestart": "Kunne ikke genstarte {0}: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Program genstartet – {0}",
-  "Email.Subject.Failed": "RestartIt: Genstart mislykkedes – {0}",
-  "Email.Body.Restarted": "Programmet “{0}” stoppede, og blev automatisk genstartet.",
-  "Email.Body.Failed": "Programmet “{0}” stoppede, men kunne ikke genstartes.",
-  "Email.Body.Time": "Tidspunkt: {0}",
-  "Email.Body.Path": "Sti: {0}",
-  "Email.Body.Signature": "Dette er en automatisk besked fra RestartIt Application Monitor."
+  "Tray.ShowWindow": "Vis vindue",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
