--- a/Localization/de.json
+++ b/Localization/de.json
@@ -7,136 +7,152 @@
   },
   "App.Title": "RestartIt - Anwendungsmonitor",
   "App.TrayTitle": "RestartIt - Anwendungsmonitor",
-
-  "MainWindow.AddProgram": "➕ Programm Hinzufügen",
-  "MainWindow.Remove": "Entfernen",
-  "MainWindow.ExportLogs": "Protokolle Exportieren",
-  "MainWindow.Settings": "Einstellungen",
-  "MainWindow.MonitoringActive": "Überwachung Aktiv",
-  "MainWindow.MonitoringStopped": "Überwachung Gestoppt",
-  "MainWindow.ActivityLog": "Aktivitätsprotokoll",
-  "MainWindow.ClearLog": "Protokoll Löschen",
-
-  "DataGrid.Enabled": "Aktiviert",
-  "DataGrid.ProgramName": "Programmname",
-  "DataGrid.Path": "Pfad",
+  "DataGrid.Actions": "Aktionen",
   "DataGrid.CheckInterval": "Prüfintervall (Sek.)",
+  "DataGrid.Edit": "⚙ Bearbeiten",
+  "DataGrid.Enabled": "Aktiviert",
+  "DataGrid.Path": "Pfad",
+  "DataGrid.ProgramName": "Programmname",
   "DataGrid.RestartDelay": "Neustartverzögerung (Sek.)",
   "DataGrid.Status": "Status",
-  "DataGrid.Actions": "Aktionen",
-  "DataGrid.Edit": "⚙ Bearbeiten",
-
-  "Status.Running": "Läuft",
-  "Status.Stopped": "Gestoppt",
-  "Status.Restarting": "Neustart",
-  "Status.Failed": "Fehlgeschlagen",
-  "Status.Unknown": "Unbekannt",
-
-  "Dialog.SelectProgram": "Programm zum Überwachen Auswählen",
+  "Dialog.Apply": "Übernehmen",
+  "Dialog.Cancel": "Abbrechen",
   "Dialog.ConfirmRemoval": "Entfernung Bestätigen",
-  "Dialog.RemoveQuestion": "Sind Sie sicher, dass Sie '{0}' aus der Überwachung entfernen möchten?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Nein",
   "Dialog.NoSelection": "Keine Auswahl",
+  "Dialog.OK": "OK",
+  "Dialog.RemoveQuestion": "Sind Sie sicher, dass Sie '{0}' aus der Überwachung entfernen möchten?",
+  "Dialog.SaveTestEmail": "Speichern & E-Mail Testen",
+  "Dialog.SelectProgram": "Programm zum Überwachen Auswählen",
   "Dialog.SelectProgramFirst": "Bitte wählen Sie zuerst ein Programm zum Entfernen aus.",
   "Dialog.Yes": "Ja",
-  "Dialog.No": "Nein",
-  "Dialog.OK": "OK",
-  "Dialog.Cancel": "Abbrechen",
-  "Dialog.Apply": "Übernehmen",
-  "Dialog.SaveTestEmail": "Speichern & E-Mail Testen",
-
-  "ProgramEdit.Title": "Programm Bearbeiten",
-  "ProgramEdit.AddTitle": "Programm Hinzufügen",
-  "ProgramEdit.ProgramName": "Programmname:",
-  "ProgramEdit.ExecutablePath": "Programmpfad:",
-  "ProgramEdit.Browse": "Durchsuchen...",
-  "ProgramEdit.Arguments": "Argumente:",
-  "ProgramEdit.WorkingDirectory": "Arbeitsverzeichnis:",
-  "ProgramEdit.CheckInterval": "Prüfintervall (Sekunden):",
-  "ProgramEdit.RestartDelay": "Neustartverzögerung (Sekunden):",
-  "ProgramEdit.ValidationError": "Validierungsfehler",
-  "ProgramEdit.ProgramNameRequired": "Programmname ist erforderlich.",
-  "ProgramEdit.InvalidPath": "Bitte wählen Sie eine gültige ausführbare Datei aus.",
-  "ProgramEdit.InvalidInterval": "Das Prüfintervall muss mindestens 5 Sekunden betragen.",
-  "ProgramEdit.InvalidDelay": "Die Neustartverzögerung muss mindestens 1 Sekunde betragen.",
-
-  "Settings.Title": "Einstellungen",
-  "Settings.Logging": "Protokollierung",
-  "Settings.EmailNotifications": "E-Mail-Benachrichtigungen",
-  "Settings.Application": "Anwendung",
-  "Settings.About": "Über",
-
-  "Settings.Logging.EnableFileLogging": "Dateiprotokollierung Aktivieren",
-  "Settings.Logging.LogFilePath": "Protokolldateipfad:",
-  "Settings.Logging.MinLogLevel": "Minimale Protokollstufe:",
-  "Settings.Logging.MaxFileSize": "Max. Dateigröße (MB):",
-  "Settings.Logging.KeepLogsFor": "Protokolle Aufbewahren (Tage):",
-  "Settings.Logging.OpenFolder": "Protokollordner Öffnen",
-
-  "Settings.Email.Enable": "E-Mail-Benachrichtigungen Aktivieren",
-  "Settings.Email.SmtpServer": "SMTP-Server:",
-  "Settings.Email.SmtpPort": "SMTP-Port:",
-  "Settings.Email.UseSsl": "SSL/TLS Verwenden",
-  "Settings.Email.SenderEmail": "Absender-E-Mail:",
-  "Settings.Email.SenderName": "Absendername:",
-  "Settings.Email.SenderPassword": "Absender-Passwort:",
-  "Settings.Email.RecipientEmail": "Empfänger-E-Mail:",
-  "Settings.Email.NotifyOnRestart": "Bei Erfolgreichem Neustart Benachrichtigen",
-  "Settings.Email.NotifyOnFailure": "Bei Neustart-Fehler Benachrichtigen",
-  "Settings.Email.TestEmail": "Test-E-Mail Senden",
-  "Settings.Email.TestSuccess": "Test-E-Mail Gesendet",
-  "Settings.Email.TestSuccessMessage": "Test-E-Mail erfolgreich gesendet! Überprüfen Sie Ihren Posteingang.",
-  "Settings.Email.TestError": "E-Mail-Test Fehlgeschlagen",
-
-  "Settings.App.StartWithWindows": "Mit Windows Starten",
-  "Settings.App.MinimizeToTray": "In Systemleiste Minimieren",
-  "Settings.App.StartMinimized": "Minimiert Starten",
-  "Settings.App.Language": "Sprache:",
-
-  "Settings.About.Version": "Version",
-  "Settings.About.Description": "Eine Windows-Desktop-Anwendung, die angegebene Programme überwacht und automatisch neu startet, wenn sie beendet werden.",
-  "Settings.About.GitHub": "GitHub-Repository",
-  "Settings.About.Copyright": "Copyright © 2025 Antik79",
-  "Settings.About.License": "Lizenziert unter der MIT-Lizenz",
-  "Settings.About.TechStack": "Technologie-Stack",
-  "Settings.About.Framework": "Framework: .NET 8.0",
-  "Settings.About.UI": "UI: WPF (Windows Presentation Foundation)",
-
-  "Export.Title": "Protokolle Exportieren",
-  "Export.Filter": "Textdateien (*.txt)|*.txt|Protokolldateien (*.log)|*.log|Alle Dateien (*.*)|*.*",
-  "Export.Success": "Export Abgeschlossen",
-  "Export.LogsExported": "Protokolle erfolgreich exportiert!",
-  "Export.UILogsExported": "UI-Protokolle erfolgreich exportiert!",
+  "Email.Body.Failed": "Das Programm '{0}' wurde beendet, konnte aber nicht neu gestartet werden.",
+  "Email.Body.Path": "Pfad: {0}",
+  "Email.Body.Restarted": "Das Programm '{0}' wurde beendet und automatisch neu gestartet.",
+  "Email.Body.Signature": "Dies ist eine automatische Nachricht vom RestartIt Anwendungsmonitor.",
+  "Email.Body.Time": "Zeit: {0}",
+  "Email.Subject.Failed": "RestartIt: Neustart Fehlgeschlagen - {0}",
+  "Email.Subject.Restart": "RestartIt: Programm Neu Gestartet - {0}",
   "Export.Error": "Exportfehler",
   "Export.ErrorMessage": "Fehler beim Exportieren der Protokolle: {0}",
-
-  "Tray.ShowWindow": "Fenster Anzeigen",
-  "Tray.Exit": "Beenden",
-  "Tray.MinimizedMessage": "Anwendung in Systemleiste minimiert",
-
-  "Log.Started": "RestartIt erfolgreich gestartet",
-  "Log.ShuttingDown": "RestartIt wird heruntergefahren",
-  "Log.ProgramAdded": "Programm hinzugefügt: {0}",
-  "Log.ProgramRemoved": "Programm entfernt: {0}",
-  "Log.ProgramUpdated": "Einstellungen aktualisiert für: {0}",
-  "Log.SettingsUpdated": "Einstellungen aktualisiert",
-  "Log.MonitoringEnabled": "Überwachung aktiviert für: {0}",
-  "Log.MonitoringDisabled": "Überwachung deaktiviert für: {0}",
+  "Export.Filter": "Textdateien (*.txt)|*.txt|Protokolldateien (*.log)|*.log|Alle Dateien (*.*)|*.*",
+  "Export.LogsExported": "Protokolle erfolgreich exportiert!",
+  "Export.Success": "Export Abgeschlossen",
+  "Export.Title": "Protokolle Exportieren",
+  "Export.UILogsExported": "UI-Protokolle erfolgreich exportiert!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Fehler bei der Überprüfung von {0}: {1}",
+  "Log.ErrorMonitoring": "Fehler bei der Überwachung von {0}: {1}",
+  "Log.FailedToRestart": "Neustart von {0} fehlgeschlagen: {1}",
   "Log.LogsExported": "Protokolle exportiert nach: {0}",
-  "Log.ProgramRestarted": "Programm neu gestartet: {0}",
-  "Log.RestartFailed": "Programm konnte nicht neu gestartet werden: {0}",
+  "Log.MonitoringDisabled": "Überwachung deaktiviert für: {0}",
+  "Log.MonitoringEnabled": "Überwachung aktiviert für: {0}",
   "Log.ProcessNotFound": "Prozess nicht gefunden: {0}",
   "Log.ProcessRunning": "Prozess läuft: {0}",
+  "Log.ProgramAdded": "Programm hinzugefügt: {0}",
   "Log.ProgramNotRunning": "{0} läuft nicht. Neustart in {1} Sekunden...",
-  "Log.ErrorMonitoring": "Fehler bei der Überwachung von {0}: {1}",
-  "Log.ErrorCheckingProcess": "Fehler bei der Überprüfung von {0}: {1}",
+  "Log.ProgramRemoved": "Programm entfernt: {0}",
+  "Log.ProgramRestarted": "Programm neu gestartet: {0}",
+  "Log.ProgramUpdated": "Einstellungen aktualisiert für: {0}",
+  "Log.RestartFailed": "Programm konnte nicht neu gestartet werden: {0}",
+  "Log.SettingsUpdated": "Einstellungen aktualisiert",
+  "Log.ShuttingDown": "RestartIt wird heruntergefahren",
+  "Log.Started": "RestartIt erfolgreich gestartet",
   "Log.SuccessfullyRestarted": "{0} erfolgreich neu gestartet",
-  "Log.FailedToRestart": "Neustart von {0} fehlgeschlagen: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Programm Neu Gestartet - {0}",
-  "Email.Subject.Failed": "RestartIt: Neustart Fehlgeschlagen - {0}",
-  "Email.Body.Restarted": "Das Programm '{0}' wurde beendet und automatisch neu gestartet.",
-  "Email.Body.Failed": "Das Programm '{0}' wurde beendet, konnte aber nicht neu gestartet werden.",
-  "Email.Body.Time": "Zeit: {0}",
-  "Email.Body.Path": "Pfad: {0}",
-  "Email.Body.Signature": "Dies ist eine automatische Nachricht vom RestartIt Anwendungsmonitor."
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Aktivitätsprotokoll",
+  "MainWindow.AddProgram": "➕ Programm Hinzufügen",
+  "MainWindow.ClearLog": "Protokoll Löschen",
+  "MainWindow.ExportLogs": "Protokolle Exportieren",
+  "MainWindow.MonitoringActive": "Überwachung Aktiv",
+  "MainWindow.MonitoringStopped": "Überwachung Gestoppt",
+  "MainWindow.Remove": "Entfernen",
+  "MainWindow.Settings": "Einstellungen",
+  "ProgramEdit.AddTitle": "Programm Hinzufügen",
+  "ProgramEdit.Arguments": "Argumente:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Durchsuchen...",
+  "ProgramEdit.CheckInterval": "Prüfintervall (Sekunden):",
+  "ProgramEdit.ExecutablePath": "Programmpfad:",
+  "ProgramEdit.InvalidDelay": "Die Neustartverzögerung muss mindestens 1 Sekunde betragen.",
+  "ProgramEdit.InvalidInterval": "Das Prüfintervall muss mindestens 5 Sekunden betragen.",
+  "ProgramEdit.InvalidPath": "Bitte wählen Sie eine gültige ausführbare Datei aus.",
+  "ProgramEdit.ProgramName": "Programmname:",
+  "ProgramEdit.ProgramNameRequired": "Programmname ist erforderlich.",
+  "ProgramEdit.RestartDelay": "Neustartverzögerung (Sekunden):",
+  "ProgramEdit.Title": "Programm Bearbeiten",
+  "ProgramEdit.ValidationError": "Validierungsfehler",
+  "ProgramEdit.WorkingDirectory": "Arbeitsverzeichnis:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "Settings.About": "Über",
+  "Settings.About.Copyright": "Copyright © 2025 Antik79",
+  "Settings.About.Description": "Eine Windows-Desktop-Anwendung, die angegebene Programme überwacht und automatisch neu startet, wenn sie beendet werden.",
+  "Settings.About.Framework": "Framework: .NET 8.0",
+  "Settings.About.GitHub": "GitHub-Repository",
+  "Settings.About.License": "Lizenziert unter der MIT-Lizenz",
+  "Settings.About.TechStack": "Technologie-Stack",
+  "Settings.About.UI": "UI: WPF (Windows Presentation Foundation)",
+  "Settings.About.Version": "Version",
+  "Settings.App.Language": "Sprache:",
+  "Settings.App.MinimizeToTray": "In Systemleiste Minimieren",
+  "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
+  "Settings.App.StartMinimized": "Minimiert Starten",
+  "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.StartWithWindows": "Mit Windows Starten",
+  "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
+  "Settings.Application": "Anwendung",
+  "Settings.Email.Enable": "E-Mail-Benachrichtigungen Aktivieren",
+  "Settings.Email.NotifyOnFailure": "Bei Neustart-Fehler Benachrichtigen",
+  "Settings.Email.NotifyOnRestart": "Bei Erfolgreichem Neustart Benachrichtigen",
+  "Settings.Email.RecipientEmail": "Empfänger-E-Mail:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Absender-E-Mail:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Absendername:",
+  "Settings.Email.SenderPassword": "Absender-Passwort:",
+  "Settings.Email.SmtpPort": "SMTP-Port:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "SMTP-Server:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Test-E-Mail Senden",
+  "Settings.Email.TestError": "E-Mail-Test Fehlgeschlagen",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Test-E-Mail Gesendet",
+  "Settings.Email.TestSuccessMessage": "Test-E-Mail erfolgreich gesendet! Überprüfen Sie Ihren Posteingang.",
+  "Settings.Email.UseSsl": "SSL/TLS Verwenden",
+  "Settings.EmailNotifications": "E-Mail-Benachrichtigungen",
+  "Settings.Logging": "Protokollierung",
+  "Settings.Logging.EnableFileLogging": "Dateiprotokollierung Aktivieren",
+  "Settings.Logging.KeepLogsFor": "Protokolle Aufbewahren (Tage):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Protokolldateipfad:",
+  "Settings.Logging.MaxFileSize": "Max. Dateigröße (MB):",
+  "Settings.Logging.MinLogLevel": "Minimale Protokollstufe:",
+  "Settings.Logging.OpenFolder": "Protokollordner Öffnen",
+  "Settings.Title": "Einstellungen",
+  "Status.Failed": "Fehlgeschlagen",
+  "Status.Restarting": "Neustart",
+  "Status.Running": "Läuft",
+  "Status.Stopped": "Gestoppt",
+  "Status.Unknown": "Unbekannt",
+  "Tray.Exit": "Beenden",
+  "Tray.MinimizedMessage": "Anwendung in Systemleiste minimiert",
+  "Tray.ShowWindow": "Fenster Anzeigen",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
