--- a/Localization/fi.json
+++ b/Localization/fi.json
@@ -5,140 +5,152 @@
     "nativeName": "Suomi",
     "icon": "🇫🇮"
   },
-
   "App.Title": "RestartIt - Sovelluksen valvonta",
   "App.TrayTitle": "RestartIt - Sovelluksen valvonta",
-
-  "MainWindow.AddProgram": "➕ Lisää ohjelma",
-  "MainWindow.Remove": "Poista",
-  "MainWindow.ExportLogs": "Vie lokit",
-  "MainWindow.Settings": "Asetukset",
-  "MainWindow.MonitoringActive": "Valvonta käynnissä",
-  "MainWindow.MonitoringStopped": "Valvonta pysäytetty",
-  "MainWindow.ActivityLog": "Toimintaloki",
-  "MainWindow.ClearLog": "Tyhjennä loki",
-
-  "DataGrid.Enabled": "Käytössä",
-  "DataGrid.ProgramName": "Ohjelman nimi",
-  "DataGrid.Path": "Polku",
+  "DataGrid.Actions": "Toiminnot",
   "DataGrid.CheckInterval": "Tarkistusväli (sek)",
+  "DataGrid.Edit": "⚙ Muokkaa",
+  "DataGrid.Enabled": "Käytössä",
+  "DataGrid.Path": "Polku",
+  "DataGrid.ProgramName": "Ohjelman nimi",
   "DataGrid.RestartDelay": "Uudelleenkäynnistyksen viive (sek)",
   "DataGrid.Status": "Tila",
-  "DataGrid.Actions": "Toiminnot",
-  "DataGrid.Edit": "⚙ Muokkaa",
-
-  "Status.Running": "Käynnissä",
-  "Status.Stopped": "Pysäytetty",
-  "Status.Restarting": "Uudelleenkäynnistyy",
-  "Status.Failed": "Epäonnistui",
-  "Status.Unknown": "Tuntematon",
-
-  "Dialog.SelectProgram": "Valitse valvottava ohjelma",
+  "Dialog.Apply": "Käytä",
+  "Dialog.Cancel": "Peruuta",
   "Dialog.ConfirmRemoval": "Vahvista poisto",
-  "Dialog.RemoveQuestion": "Haluatko varmasti poistaa '{0}' valvonnasta?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Ei",
   "Dialog.NoSelection": "Ei valintaa",
+  "Dialog.OK": "OK",
+  "Dialog.RemoveQuestion": "Haluatko varmasti poistaa '{0}' valvonnasta?",
+  "Dialog.SaveTestEmail": "Tallenna ja testaa sähköposti",
+  "Dialog.SelectProgram": "Valitse valvottava ohjelma",
   "Dialog.SelectProgramFirst": "Valitse ensin poistettava ohjelma.",
   "Dialog.Yes": "Kyllä",
-  "Dialog.No": "Ei",
-  "Dialog.OK": "OK",
-  "Dialog.Cancel": "Peruuta",
-  "Dialog.Apply": "Käytä",
-  "Dialog.SaveTestEmail": "Tallenna ja testaa sähköposti",
-
-  "ProgramEdit.Title": "Muokkaa ohjelmaa",
+  "Email.Body.Failed": "Ohjelma '{0}' on lopettanut toiminnan, mutta sitä ei voitu käynnistää uudelleen.",
+  "Email.Body.Path": "Polku: {0}",
+  "Email.Body.Restarted": "Ohjelma '{0}' on lopettanut toiminnan ja se käynnistettiin automaattisesti uudelleen.",
+  "Email.Body.Signature": "Tämä on automaattinen viesti RestartIt Application Monitor -ohjelmasta.",
+  "Email.Body.Time": "Aika: {0}",
+  "Email.Subject.Failed": "RestartIt: Uudelleenkäynnistys epäonnistui - {0}",
+  "Email.Subject.Restart": "RestartIt: Ohjelma käynnistetty uudelleen - {0}",
+  "Export.Error": "Vientivirhe",
+  "Export.ErrorMessage": "Virhe vietäessä lokit: {0}",
+  "Export.Filter": "Tekstitiedostot (*.txt)|*.txt|Lokitiedostot (*.log)|*.log|Kaikki tiedostot (*.*)|*.*",
+  "Export.LogsExported": "Lokit viety onnistuneesti!",
+  "Export.Success": "Vienti valmis",
+  "Export.Title": "Vie lokit",
+  "Export.UILogsExported": "Käyttöliittymän lokit viety onnistuneesti!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Virhe tarkistettaessa onko {0} käynnissä: {1}",
+  "Log.ErrorMonitoring": "Virhe valvottaessa {0}: {1}",
+  "Log.FailedToRestart": "{0} uudelleenkäynnistys epäonnistui: {1}",
+  "Log.LogsExported": "Lokit viety kohteeseen: {0}",
+  "Log.MonitoringDisabled": "Valvonta poistettu käytöstä: {0}",
+  "Log.MonitoringEnabled": "Valvonta otettu käyttöön: {0}",
+  "Log.ProcessNotFound": "Prosessia ei löydy: {0}",
+  "Log.ProcessRunning": "Prosessi käynnissä: {0}",
+  "Log.ProgramAdded": "Lisätty ohjelma: {0}",
+  "Log.ProgramNotRunning": "{0} ei ole käynnissä. Uudelleenkäynnistys {1} sekunnin kuluttua...",
+  "Log.ProgramRemoved": "Poistettu ohjelma: {0}",
+  "Log.ProgramRestarted": "Ohjelma käynnistetty uudelleen: {0}",
+  "Log.ProgramUpdated": "Päivitetty asetukset: {0}",
+  "Log.RestartFailed": "Ohjelman uudelleenkäynnistys epäonnistui: {0}",
+  "Log.SettingsUpdated": "Asetukset päivitetty",
+  "Log.ShuttingDown": "RestartIt sammutetaan",
+  "Log.Started": "RestartIt käynnistyi onnistuneesti",
+  "Log.SuccessfullyRestarted": "{0} käynnistettiin onnistuneesti uudelleen",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Toimintaloki",
+  "MainWindow.AddProgram": "➕ Lisää ohjelma",
+  "MainWindow.ClearLog": "Tyhjennä loki",
+  "MainWindow.ExportLogs": "Vie lokit",
+  "MainWindow.MonitoringActive": "Valvonta käynnissä",
+  "MainWindow.MonitoringStopped": "Valvonta pysäytetty",
+  "MainWindow.Remove": "Poista",
+  "MainWindow.Settings": "Asetukset",
   "ProgramEdit.AddTitle": "Lisää ohjelma",
-  "ProgramEdit.ProgramName": "Ohjelman nimi:",
-  "ProgramEdit.ExecutablePath": "Suoritustiedoston polku:",
-  "ProgramEdit.Browse": "Selaa...",
   "ProgramEdit.Arguments": "Argumentit:",
-  "ProgramEdit.WorkingDirectory": "Työhakemisto:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Selaa...",
   "ProgramEdit.CheckInterval": "Tarkistusväli (sekuntia):",
-  "ProgramEdit.RestartDelay": "Uudelleenkäynnistyksen viive (sekuntia):",
-  "ProgramEdit.ValidationError": "Validointivirhe",
-  "ProgramEdit.ProgramNameRequired": "Ohjelman nimi vaaditaan.",
-  "ProgramEdit.InvalidPath": "Valitse kelvollinen suoritustiedosto.",
-  "ProgramEdit.InvalidInterval": "Tarkistusvälin on oltava vähintään 5 sekuntia.",
+  "ProgramEdit.ExecutablePath": "Suoritustiedoston polku:",
   "ProgramEdit.InvalidDelay": "Uudelleenkäynnistyksen viiveen on oltava vähintään 1 sekunti.",
-
-  "Settings.Title": "Asetukset",
-  "Settings.Logging": "Lokitus",
-  "Settings.EmailNotifications": "Sähköposti-ilmoitukset",
-  "Settings.Application": "Sovellus",
+  "ProgramEdit.InvalidInterval": "Tarkistusvälin on oltava vähintään 5 sekuntia.",
+  "ProgramEdit.InvalidPath": "Valitse kelvollinen suoritustiedosto.",
+  "ProgramEdit.ProgramName": "Ohjelman nimi:",
+  "ProgramEdit.ProgramNameRequired": "Ohjelman nimi vaaditaan.",
+  "ProgramEdit.RestartDelay": "Uudelleenkäynnistyksen viive (sekuntia):",
+  "ProgramEdit.Title": "Muokkaa ohjelmaa",
+  "ProgramEdit.ValidationError": "Validointivirhe",
+  "ProgramEdit.WorkingDirectory": "Työhakemisto:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
   "Settings.About": "Tietoja",
-
-  "Settings.Logging.EnableFileLogging": "Ota tiedostolokitus käyttöön",
-  "Settings.Logging.LogFilePath": "Lokitiedoston polku:",
-  "Settings.Logging.MinLogLevel": "Vähimmäislokitaso:",
-  "Settings.Logging.MaxFileSize": "Tiedoston maksimikoko (MT):",
-  "Settings.Logging.KeepLogsFor": "Säilytä lokit (päiviä):",
-  "Settings.Logging.OpenFolder": "Avaa lokikansio",
-
-  "Settings.Email.Enable": "Ota sähköposti-ilmoitukset käyttöön",
-  "Settings.Email.SmtpServer": "SMTP-palvelin:",
-  "Settings.Email.SmtpPort": "SMTP-portti:",
-  "Settings.Email.UseSsl": "Käytä SSL/TLS:ää",
-  "Settings.Email.SenderEmail": "Lähettäjän sähköposti:",
-  "Settings.Email.SenderName": "Lähettäjän nimi:",
-  "Settings.Email.SenderPassword": "Lähettäjän salasana:",
-  "Settings.Email.RecipientEmail": "Vastaanottajan sähköposti:",
-  "Settings.Email.NotifyOnRestart": "Ilmoita onnistuneesta uudelleenkäynnistyksestä",
-  "Settings.Email.NotifyOnFailure": "Ilmoita epäonnistuneesta uudelleenkäynnistyksestä",
-  "Settings.Email.TestEmail": "Lähetä testisähköposti",
-  "Settings.Email.TestSuccess": "Testisähköposti lähetetty",
-  "Settings.Email.TestSuccessMessage": "Testisähköposti lähetetty onnistuneesti! Tarkista postilaatikkosi.",
-  "Settings.Email.TestError": "Sähköpostitesti epäonnistui",
-
-  "Settings.App.StartWithWindows": "Käynnistä Windowsin kanssa",
-  "Settings.App.StartWithWindowsDesc": "Käynnistä RestartIt automaattisesti Windowsin käynnistyessä.",
+  "Settings.About.Copyright": "Tekijänoikeus © 2025 Antik79",
+  "Settings.About.Description": "Windows-työpöytäsovellus, joka valvoo määritettyjä ohjelmia ja käynnistää ne automaattisesti uudelleen, jos ne lakkaavat toimimasta.",
+  "Settings.About.GitHub": "GitHub-repositorio",
+  "Settings.About.License": "Julkaistu MIT-lisenssin alaisena",
+  "Settings.About.TechStack": "Rakennettu .NET 8.0:lla ja WPF:llä",
+  "Settings.About.Version": "Versio",
+  "Settings.App.Language": "Kieli:",
   "Settings.App.MinimizeToTray": "Pienennä tehtäväpalkkiin",
   "Settings.App.MinimizeToTrayDesc": "Kun pienennetty, sovellus piilotetaan tehtäväpalkin sijaan ilmoitusalueelle.",
   "Settings.App.StartMinimized": "Käynnistä pienennettynä",
   "Settings.App.StartMinimizedDesc": "Käynnistä RestartIt pienennettynä ilmoitusalueelle (vaatii 'Pienennä tehtäväpalkkiin' -asetuksen).",
-  "Settings.App.Language": "Kieli:",
-
-  "Settings.About.Version": "Versio",
-  "Settings.About.Description": "Windows-työpöytäsovellus, joka valvoo määritettyjä ohjelmia ja käynnistää ne automaattisesti uudelleen, jos ne lakkaavat toimimasta.",
-  "Settings.About.GitHub": "GitHub-repositorio",
-  "Settings.About.Copyright": "Tekijänoikeus © 2025 Antik79",
-  "Settings.About.License": "Julkaistu MIT-lisenssin alaisena",
-  "Settings.About.TechStack": "Rakennettu .NET 8.0:lla ja WPF:llä",
-
-  "Export.Title": "Vie lokit",
-  "Export.Filter": "Tekstitiedostot (*.txt)|*.txt|Lokitiedostot (*.log)|*.log|Kaikki tiedostot (*.*)|*.*",
-  "Export.Success": "Vienti valmis",
-  "Export.LogsExported": "Lokit viety onnistuneesti!",
-  "Export.UILogsExported": "Käyttöliittymän lokit viety onnistuneesti!",
-  "Export.Error": "Vientivirhe",
-  "Export.ErrorMessage": "Virhe vietäessä lokit: {0}",
-
-  "Tray.ShowWindow": "Näytä ikkuna",
+  "Settings.App.StartWithWindows": "Käynnistä Windowsin kanssa",
+  "Settings.App.StartWithWindowsDesc": "Käynnistä RestartIt automaattisesti Windowsin käynnistyessä.",
+  "Settings.Application": "Sovellus",
+  "Settings.Email.Enable": "Ota sähköposti-ilmoitukset käyttöön",
+  "Settings.Email.NotifyOnFailure": "Ilmoita epäonnistuneesta uudelleenkäynnistyksestä",
+  "Settings.Email.NotifyOnRestart": "Ilmoita onnistuneesta uudelleenkäynnistyksestä",
+  "Settings.Email.RecipientEmail": "Vastaanottajan sähköposti:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Lähettäjän sähköposti:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Lähettäjän nimi:",
+  "Settings.Email.SenderPassword": "Lähettäjän salasana:",
+  "Settings.Email.SmtpPort": "SMTP-portti:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "SMTP-palvelin:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Lähetä testisähköposti",
+  "Settings.Email.TestError": "Sähköpostitesti epäonnistui",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Testisähköposti lähetetty",
+  "Settings.Email.TestSuccessMessage": "Testisähköposti lähetetty onnistuneesti! Tarkista postilaatikkosi.",
+  "Settings.Email.UseSsl": "Käytä SSL/TLS:ää",
+  "Settings.EmailNotifications": "Sähköposti-ilmoitukset",
+  "Settings.Logging": "Lokitus",
+  "Settings.Logging.EnableFileLogging": "Ota tiedostolokitus käyttöön",
+  "Settings.Logging.KeepLogsFor": "Säilytä lokit (päiviä):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Lokitiedoston polku:",
+  "Settings.Logging.MaxFileSize": "Tiedoston maksimikoko (MT):",
+  "Settings.Logging.MinLogLevel": "Vähimmäislokitaso:",
+  "Settings.Logging.OpenFolder": "Avaa lokikansio",
+  "Settings.Title": "Asetukset",
+  "Status.Failed": "Epäonnistui",
+  "Status.Restarting": "Uudelleenkäynnistyy",
+  "Status.Running": "Käynnissä",
+  "Status.Stopped": "Pysäytetty",
+  "Status.Unknown": "Tuntematon",
   "Tray.Exit": "Sulje",
   "Tray.MinimizedMessage": "Sovellus on pienennetty ilmoitusalueelle",
-
-  "Log.Started": "RestartIt käynnistyi onnistuneesti",
-  "Log.ShuttingDown": "RestartIt sammutetaan",
-  "Log.ProgramAdded": "Lisätty ohjelma: {0}",
-  "Log.ProgramRemoved": "Poistettu ohjelma: {0}",
-  "Log.ProgramUpdated": "Päivitetty asetukset: {0}",
-  "Log.SettingsUpdated": "Asetukset päivitetty",
-  "Log.MonitoringEnabled": "Valvonta otettu käyttöön: {0}",
-  "Log.MonitoringDisabled": "Valvonta poistettu käytöstä: {0}",
-  "Log.LogsExported": "Lokit viety kohteeseen: {0}",
-  "Log.ProgramRestarted": "Ohjelma käynnistetty uudelleen: {0}",
-  "Log.RestartFailed": "Ohjelman uudelleenkäynnistys epäonnistui: {0}",
-  "Log.ProcessNotFound": "Prosessia ei löydy: {0}",
-  "Log.ProcessRunning": "Prosessi käynnissä: {0}",
-  "Log.ProgramNotRunning": "{0} ei ole käynnissä. Uudelleenkäynnistys {1} sekunnin kuluttua...",
-  "Log.ErrorMonitoring": "Virhe valvottaessa {0}: {1}",
-  "Log.ErrorCheckingProcess": "Virhe tarkistettaessa onko {0} käynnissä: {1}",
-  "Log.SuccessfullyRestarted": "{0} käynnistettiin onnistuneesti uudelleen",
-  "Log.FailedToRestart": "{0} uudelleenkäynnistys epäonnistui: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Ohjelma käynnistetty uudelleen - {0}",
-  "Email.Subject.Failed": "RestartIt: Uudelleenkäynnistys epäonnistui - {0}",
-  "Email.Body.Restarted": "Ohjelma '{0}' on lopettanut toiminnan ja se käynnistettiin automaattisesti uudelleen.",
-  "Email.Body.Failed": "Ohjelma '{0}' on lopettanut toiminnan, mutta sitä ei voitu käynnistää uudelleen.",
-  "Email.Body.Time": "Aika: {0}",
-  "Email.Body.Path": "Polku: {0}",
-  "Email.Body.Signature": "Tämä on automaattinen viesti RestartIt Application Monitor -ohjelmasta."
+  "Tray.ShowWindow": "Näytä ikkuna",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
