--- a/Localization/ko.json
+++ b/Localization/ko.json
@@ -1,144 +1,156 @@
 {
   "_metadata": {
-  "code": "ko",
-  "name": "Korean",
+    "code": "ko",
+    "name": "Korean",
     "nativeName": "한국어",
     "icon": "🇰🇷"
   },
-
   "App.Title": "RestartIt - 애플리케이션 모니터",
   "App.TrayTitle": "RestartIt - 애플리케이션 모니터",
-
-  "MainWindow.AddProgram": "➕ 프로그램 추가",
-  "MainWindow.Remove": "제거",
-  "MainWindow.ExportLogs": "로그 내보내기",
-  "MainWindow.Settings": "설정",
-  "MainWindow.MonitoringActive": "모니터링 활성화",
-  "MainWindow.MonitoringStopped": "모니터링 중지",
-  "MainWindow.ActivityLog": "활동 로그",
-  "MainWindow.ClearLog": "로그 비우기",
-
-  "DataGrid.Enabled": "사용",
-  "DataGrid.ProgramName": "프로그램 이름",
-  "DataGrid.Path": "경로",
+  "DataGrid.Actions": "작업",
   "DataGrid.CheckInterval": "점검 간격(초)",
+  "DataGrid.Edit": "⚙ 편집",
+  "DataGrid.Enabled": "사용",
+  "DataGrid.Path": "경로",
+  "DataGrid.ProgramName": "프로그램 이름",
   "DataGrid.RestartDelay": "재시작 지연(초)",
   "DataGrid.Status": "상태",
-  "DataGrid.Actions": "작업",
-  "DataGrid.Edit": "⚙ 편집",
-
-  "Status.Running": "실행 중",
-  "Status.Stopped": "중지됨",
-  "Status.Restarting": "재시작 중",
-  "Status.Failed": "실패",
-  "Status.Unknown": "알 수 없음",
-
-  "Dialog.SelectProgram": "모니터링할 프로그램 선택",
+  "Dialog.Apply": "적용",
+  "Dialog.Cancel": "취소",
   "Dialog.ConfirmRemoval": "제거 확인",
-  "Dialog.RemoveQuestion": "'{0}'을(를) 모니터링 목록에서 제거하시겠습니까?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "아니오",
   "Dialog.NoSelection": "선택 없음",
+  "Dialog.OK": "확인",
+  "Dialog.RemoveQuestion": "'{0}'을(를) 모니터링 목록에서 제거하시겠습니까?",
+  "Dialog.SaveTestEmail": "저장 및 테스트 이메일",
+  "Dialog.SelectProgram": "모니터링할 프로그램 선택",
   "Dialog.SelectProgramFirst": "먼저 제거할 프로그램을 선택하세요.",
   "Dialog.Yes": "예",
-  "Dialog.No": "아니오",
-  "Dialog.OK": "확인",
-  "Dialog.Cancel": "취소",
-  "Dialog.Apply": "적용",
-  "Dialog.SaveTestEmail": "저장 및 테스트 이메일",
-
-  "ProgramEdit.Title": "프로그램 편집",
+  "Email.Body.Failed": "프로그램 '{0}'이(가) 중단되었지만 재시작하지 못했습니다.",
+  "Email.Body.Path": "경로: {0}",
+  "Email.Body.Restarted": "프로그램 '{0}'이(가) 중단되어 자동으로 재시작되었습니다.",
+  "Email.Body.Signature": "이 메시지는 RestartIt Application Monitor에서 자동으로 발송되었습니다.",
+  "Email.Body.Time": "시간: {0}",
+  "Email.Subject.Failed": "RestartIt: 재시작 실패 - {0}",
+  "Email.Subject.Restart": "RestartIt: 프로그램 재시작 - {0}",
+  "Export.Error": "내보내기 오류",
+  "Export.ErrorMessage": "로그 내보내기 중 오류 발생: {0}",
+  "Export.Filter": "텍스트 파일 (*.txt)|*.txt|로그 파일 (*.log)|*.log|모든 파일 (*.*)|*.*",
+  "Export.LogsExported": "로그가 성공적으로 내보내졌습니다!",
+  "Export.Success": "내보내기 완료",
+  "Export.Title": "로그 내보내기",
+  "Export.UILogsExported": "UI 로그가 성공적으로 내보내졌습니다!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "{0}이(가) 실행 중인지 확인하는 중 오류 발생: {1}",
+  "Log.ErrorMonitoring": "{0} 모니터링 중 오류 발생: {1}",
+  "Log.FailedToRestart": "{0} 재시작 실패: {1}",
+  "Log.LogsExported": "로그가 다음 위치에 내보내짐: {0}",
+  "Log.MonitoringDisabled": "모니터링 비활성화: {0}",
+  "Log.MonitoringEnabled": "모니터링 활성화: {0}",
+  "Log.ProcessNotFound": "프로세스를 찾을 수 없음: {0}",
+  "Log.ProcessRunning": "프로세스 실행 중: {0}",
+  "Log.ProgramAdded": "프로그램 추가됨: {0}",
+  "Log.ProgramNotRunning": "{0}이(가) 실행되지 않습니다. {1}초 후에 재시작합니다...",
+  "Log.ProgramRemoved": "프로그램 제거됨: {0}",
+  "Log.ProgramRestarted": "프로그램 재시작됨: {0}",
+  "Log.ProgramUpdated": "설정 업데이트됨: {0}",
+  "Log.RestartFailed": "프로그램 재시작 실패: {0}",
+  "Log.SettingsUpdated": "설정이 업데이트되었습니다",
+  "Log.ShuttingDown": "RestartIt을 종료합니다",
+  "Log.Started": "RestartIt이 정상적으로 시작되었습니다",
+  "Log.SuccessfullyRestarted": "{0}을(를) 성공적으로 재시작했습니다",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "활동 로그",
+  "MainWindow.AddProgram": "➕ 프로그램 추가",
+  "MainWindow.ClearLog": "로그 비우기",
+  "MainWindow.ExportLogs": "로그 내보내기",
+  "MainWindow.MonitoringActive": "모니터링 활성화",
+  "MainWindow.MonitoringStopped": "모니터링 중지",
+  "MainWindow.Remove": "제거",
+  "MainWindow.Settings": "설정",
   "ProgramEdit.AddTitle": "프로그램 추가",
-  "ProgramEdit.ProgramName": "프로그램 이름:",
-  "ProgramEdit.ExecutablePath": "실행 파일 경로:",
-  "ProgramEdit.Browse": "찾아보기...",
   "ProgramEdit.Arguments": "인수:",
-  "ProgramEdit.WorkingDirectory": "작업 디렉터리:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "찾아보기...",
   "ProgramEdit.CheckInterval": "점검 간격(초):",
-  "ProgramEdit.RestartDelay": "재시작 지연(초):",
-  "ProgramEdit.ValidationError": "유효성 검사 오류",
-  "ProgramEdit.ProgramNameRequired": "프로그램 이름은 필수입니다.",
-  "ProgramEdit.InvalidPath": "올바른 실행 파일을 선택하세요.",
-  "ProgramEdit.InvalidInterval": "점검 간격은 최소 5초여야 합니다.",
+  "ProgramEdit.ExecutablePath": "실행 파일 경로:",
   "ProgramEdit.InvalidDelay": "재시작 지연은 최소 1초여야 합니다.",
-
-  "Settings.Title": "설정",
-  "Settings.Logging": "로그 기록",
-  "Settings.EmailNotifications": "이메일 알림",
-  "Settings.Application": "애플리케이션",
+  "ProgramEdit.InvalidInterval": "점검 간격은 최소 5초여야 합니다.",
+  "ProgramEdit.InvalidPath": "올바른 실행 파일을 선택하세요.",
+  "ProgramEdit.ProgramName": "프로그램 이름:",
+  "ProgramEdit.ProgramNameRequired": "프로그램 이름은 필수입니다.",
+  "ProgramEdit.RestartDelay": "재시작 지연(초):",
+  "ProgramEdit.Title": "프로그램 편집",
+  "ProgramEdit.ValidationError": "유효성 검사 오류",
+  "ProgramEdit.WorkingDirectory": "작업 디렉터리:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
   "Settings.About": "정보",
-
-  "Settings.Logging.EnableFileLogging": "파일 로그 사용",
-  "Settings.Logging.LogFilePath": "로그 파일 경로:",
-  "Settings.Logging.MinLogLevel": "최소 로그 레벨:",
-  "Settings.Logging.MaxFileSize": "최대 파일 크기(MB):",
-  "Settings.Logging.KeepLogsFor": "로그 보관 기간(일):",
-  "Settings.Logging.OpenFolder": "폴더 열기",
-
-  "Settings.Email.Enable": "이메일 알림 사용",
-  "Settings.Email.SmtpServer": "SMTP 서버:",
-  "Settings.Email.SmtpPort": "SMTP 포트:",
-  "Settings.Email.UseSsl": "SSL/TLS 사용",
-  "Settings.Email.SenderEmail": "발신자 이메일:",
-  "Settings.Email.SenderName": "발신자 이름:",
-  "Settings.Email.SenderPassword": "발신자 비밀번호:",
-  "Settings.Email.RecipientEmail": "수신자 이메일:",
-  "Settings.Email.NotifyOnRestart": "재시작 성공 시 알림",
-  "Settings.Email.NotifyOnFailure": "재시작 실패 시 알림",
-  "Settings.Email.TestEmail": "테스트 이메일 보내기",
-  "Settings.Email.TestSuccess": "테스트 이메일 전송 성공",
-  "Settings.Email.TestSuccessMessage": "테스트 이메일이 성공적으로 전송되었습니다. 받은편지함을 확인하세요.",
-  "Settings.Email.TestError": "테스트 이메일 전송 실패",
-
-  "Settings.App.StartWithWindows": "Windows 시작 시 자동 실행",
-  "Settings.App.StartWithWindowsDesc": "Windows가 시작될 때 RestartIt을 자동으로 시작합니다.",
+  "Settings.About.Copyright": "저작권 © 2025 Antik79",
+  "Settings.About.Description": "지정된 프로그램을 모니터링하고 중단되면 자동으로 재시작하는 Windows 데스크톱 애플리케이션입니다.",
+  "Settings.About.GitHub": "GitHub 저장소",
+  "Settings.About.License": "MIT 라이선스 적용",
+  "Settings.About.TechStack": ".NET 8.0 및 WPF 기반",
+  "Settings.About.Version": "버전",
+  "Settings.App.Language": "언어:",
   "Settings.App.MinimizeToTray": "시스템 트레이에 최소화",
   "Settings.App.MinimizeToTrayDesc": "최소화하면 작업 표시줄 대신 시스템 트레이에 숨겨집니다.",
   "Settings.App.StartMinimized": "시작 시 최소화",
   "Settings.App.StartMinimizedDesc": "시작 시 RestartIt을 트레이에 최소화된 상태로 실행합니다(‘시스템 트레이에 최소화’가 활성화돼 있어야 함).",
-  "Settings.App.Language": "언어:",
-
-  "Settings.About.Version": "버전",
-  "Settings.About.Description": "지정된 프로그램을 모니터링하고 중단되면 자동으로 재시작하는 Windows 데스크톱 애플리케이션입니다.",
-  "Settings.About.GitHub": "GitHub 저장소",
-  "Settings.About.Copyright": "저작권 © 2025 Antik79",
-  "Settings.About.License": "MIT 라이선스 적용",
-  "Settings.About.TechStack": ".NET 8.0 및 WPF 기반",
-
-  "Export.Title": "로그 내보내기",
-  "Export.Filter": "텍스트 파일 (*.txt)|*.txt|로그 파일 (*.log)|*.log|모든 파일 (*.*)|*.*",
-  "Export.Success": "내보내기 완료",
-  "Export.LogsExported": "로그가 성공적으로 내보내졌습니다!",
-  "Export.UILogsExported": "UI 로그가 성공적으로 내보내졌습니다!",
-  "Export.Error": "내보내기 오류",
-  "Export.ErrorMessage": "로그 내보내기 중 오류 발생: {0}",
-
-  "Tray.ShowWindow": "창 표시",
+  "Settings.App.StartWithWindows": "Windows 시작 시 자동 실행",
+  "Settings.App.StartWithWindowsDesc": "Windows가 시작될 때 RestartIt을 자동으로 시작합니다.",
+  "Settings.Application": "애플리케이션",
+  "Settings.Email.Enable": "이메일 알림 사용",
+  "Settings.Email.NotifyOnFailure": "재시작 실패 시 알림",
+  "Settings.Email.NotifyOnRestart": "재시작 성공 시 알림",
+  "Settings.Email.RecipientEmail": "수신자 이메일:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "발신자 이메일:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "발신자 이름:",
+  "Settings.Email.SenderPassword": "발신자 비밀번호:",
+  "Settings.Email.SmtpPort": "SMTP 포트:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "SMTP 서버:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "테스트 이메일 보내기",
+  "Settings.Email.TestError": "테스트 이메일 전송 실패",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "테스트 이메일 전송 성공",
+  "Settings.Email.TestSuccessMessage": "테스트 이메일이 성공적으로 전송되었습니다. 받은편지함을 확인하세요.",
+  "Settings.Email.UseSsl": "SSL/TLS 사용",
+  "Settings.EmailNotifications": "이메일 알림",
+  "Settings.Logging": "로그 기록",
+  "Settings.Logging.EnableFileLogging": "파일 로그 사용",
+  "Settings.Logging.KeepLogsFor": "로그 보관 기간(일):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "로그 파일 경로:",
+  "Settings.Logging.MaxFileSize": "최대 파일 크기(MB):",
+  "Settings.Logging.MinLogLevel": "최소 로그 레벨:",
+  "Settings.Logging.OpenFolder": "폴더 열기",
+  "Settings.Title": "설정",
+  "Status.Failed": "실패",
+  "Status.Restarting": "재시작 중",
+  "Status.Running": "실행 중",
+  "Status.Stopped": "중지됨",
+  "Status.Unknown": "알 수 없음",
   "Tray.Exit": "종료",
   "Tray.MinimizedMessage": "앱이 시스템 트레이에 최소화되었습니다",
-
-  "Log.Started": "RestartIt이 정상적으로 시작되었습니다",
-  "Log.ShuttingDown": "RestartIt을 종료합니다",
-  "Log.ProgramAdded": "프로그램 추가됨: {0}",
-  "Log.ProgramRemoved": "프로그램 제거됨: {0}",
-  "Log.ProgramUpdated": "설정 업데이트됨: {0}",
-  "Log.SettingsUpdated": "설정이 업데이트되었습니다",
-  "Log.MonitoringEnabled": "모니터링 활성화: {0}",
-  "Log.MonitoringDisabled": "모니터링 비활성화: {0}",
-  "Log.LogsExported": "로그가 다음 위치에 내보내짐: {0}",
-  "Log.ProgramRestarted": "프로그램 재시작됨: {0}",
-  "Log.RestartFailed": "프로그램 재시작 실패: {0}",
-  "Log.ProcessNotFound": "프로세스를 찾을 수 없음: {0}",
-  "Log.ProcessRunning": "프로세스 실행 중: {0}",
-  "Log.ProgramNotRunning": "{0}이(가) 실행되지 않습니다. {1}초 후에 재시작합니다...",
-  "Log.ErrorMonitoring": "{0} 모니터링 중 오류 발생: {1}",
-  "Log.ErrorCheckingProcess": "{0}이(가) 실행 중인지 확인하는 중 오류 발생: {1}",
-  "Log.SuccessfullyRestarted": "{0}을(를) 성공적으로 재시작했습니다",
-  "Log.FailedToRestart": "{0} 재시작 실패: {1}",
-
-  "Email.Subject.Restart": "RestartIt: 프로그램 재시작 - {0}",
-  "Email.Subject.Failed": "RestartIt: 재시작 실패 - {0}",
-  "Email.Body.Restarted": "프로그램 '{0}'이(가) 중단되어 자동으로 재시작되었습니다.",
-  "Email.Body.Failed": "프로그램 '{0}'이(가) 중단되었지만 재시작하지 못했습니다.",
-  "Email.Body.Time": "시간: {0}",
-  "Email.Body.Path": "경로: {0}",
-  "Email.Body.Signature": "이 메시지는 RestartIt Application Monitor에서 자동으로 발송되었습니다."
+  "Tray.ShowWindow": "창 표시",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
