--- a/Localization/nl.json
+++ b/Localization/nl.json
@@ -7,136 +7,152 @@
   },
   "App.Title": "RestartIt - Applicatie Monitor",
   "App.TrayTitle": "RestartIt - Applicatie Monitor",
-
-  "MainWindow.AddProgram": "➕ Programma Toevoegen",
-  "MainWindow.Remove": "Verwijderen",
-  "MainWindow.ExportLogs": "Logs Exporteren",
-  "MainWindow.Settings": "Instellingen",
-  "MainWindow.MonitoringActive": "Monitoring Actief",
-  "MainWindow.MonitoringStopped": "Monitoring Gestopt",
-  "MainWindow.ActivityLog": "Activiteitenlog",
-  "MainWindow.ClearLog": "Log Wissen",
-
-  "DataGrid.Enabled": "Ingeschakeld",
-  "DataGrid.ProgramName": "Programmanaam",
-  "DataGrid.Path": "Pad",
+  "DataGrid.Actions": "Acties",
   "DataGrid.CheckInterval": "Controle Interval (sec)",
+  "DataGrid.Edit": "⚙ Bewerken",
+  "DataGrid.Enabled": "Ingeschakeld",
+  "DataGrid.Path": "Pad",
+  "DataGrid.ProgramName": "Programmanaam",
   "DataGrid.RestartDelay": "Herstart Vertraging (sec)",
   "DataGrid.Status": "Status",
-  "DataGrid.Actions": "Acties",
-  "DataGrid.Edit": "⚙ Bewerken",
-
-  "Status.Running": "Actief",
-  "Status.Stopped": "Gestopt",
-  "Status.Restarting": "Herstarten",
-  "Status.Failed": "Mislukt",
-  "Status.Unknown": "Onbekend",
-
-  "Dialog.SelectProgram": "Selecteer Programma om te Monitoren",
+  "Dialog.Apply": "Toepassen",
+  "Dialog.Cancel": "Annuleren",
   "Dialog.ConfirmRemoval": "Verwijdering Bevestigen",
-  "Dialog.RemoveQuestion": "Weet u zeker dat u '{0}' wilt verwijderen uit de monitoring?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Nee",
   "Dialog.NoSelection": "Geen Selectie",
+  "Dialog.OK": "OK",
+  "Dialog.RemoveQuestion": "Weet u zeker dat u '{0}' wilt verwijderen uit de monitoring?",
+  "Dialog.SaveTestEmail": "Opslaan & E-mail Testen",
+  "Dialog.SelectProgram": "Selecteer Programma om te Monitoren",
   "Dialog.SelectProgramFirst": "Selecteer eerst een programma om te verwijderen.",
   "Dialog.Yes": "Ja",
-  "Dialog.No": "Nee",
-  "Dialog.OK": "OK",
-  "Dialog.Cancel": "Annuleren",
-  "Dialog.Apply": "Toepassen",
-  "Dialog.SaveTestEmail": "Opslaan & E-mail Testen",
-
-  "ProgramEdit.Title": "Programma Bewerken",
-  "ProgramEdit.AddTitle": "Programma Toevoegen",
-  "ProgramEdit.ProgramName": "Programmanaam:",
-  "ProgramEdit.ExecutablePath": "Uitvoerbaar Bestand:",
-  "ProgramEdit.Browse": "Bladeren...",
-  "ProgramEdit.Arguments": "Argumenten:",
-  "ProgramEdit.WorkingDirectory": "Werkmap:",
-  "ProgramEdit.CheckInterval": "Controle Interval (seconden):",
-  "ProgramEdit.RestartDelay": "Herstart Vertraging (seconden):",
-  "ProgramEdit.ValidationError": "Validatiefout",
-  "ProgramEdit.ProgramNameRequired": "Programmanaam is verplicht.",
-  "ProgramEdit.InvalidPath": "Selecteer een geldig uitvoerbaar bestand.",
-  "ProgramEdit.InvalidInterval": "Controle interval moet minimaal 5 seconden zijn.",
-  "ProgramEdit.InvalidDelay": "Herstart vertraging moet minimaal 1 seconde zijn.",
-
-  "Settings.Title": "Instellingen",
-  "Settings.Logging": "Logboek",
-  "Settings.EmailNotifications": "E-mailmeldingen",
-  "Settings.Application": "Applicatie",
-  "Settings.About": "Over",
-
-  "Settings.Logging.EnableFileLogging": "Bestandslogboek Inschakelen",
-  "Settings.Logging.LogFilePath": "Logbestandspad:",
-  "Settings.Logging.MinLogLevel": "Minimaal Logniveau:",
-  "Settings.Logging.MaxFileSize": "Max Bestandsgrootte (MB):",
-  "Settings.Logging.KeepLogsFor": "Logs Bewaren Voor (dagen):",
-  "Settings.Logging.OpenFolder": "Logmap Openen",
-
-  "Settings.Email.Enable": "E-mailmeldingen Inschakelen",
-  "Settings.Email.SmtpServer": "SMTP Server:",
-  "Settings.Email.SmtpPort": "SMTP Poort:",
-  "Settings.Email.UseSsl": "SSL/TLS Gebruiken",
-  "Settings.Email.SenderEmail": "Afzender E-mail:",
-  "Settings.Email.SenderName": "Afzender Naam:",
-  "Settings.Email.SenderPassword": "Afzender Wachtwoord:",
-  "Settings.Email.RecipientEmail": "Ontvanger E-mail:",
-  "Settings.Email.NotifyOnRestart": "Melding bij Succesvolle Herstart",
-  "Settings.Email.NotifyOnFailure": "Melding bij Herstart Fout",
-  "Settings.Email.TestEmail": "Test E-mail Verzenden",
-  "Settings.Email.TestSuccess": "Test E-mail Verzonden",
-  "Settings.Email.TestSuccessMessage": "Test e-mail succesvol verzonden! Controleer uw inbox.",
-  "Settings.Email.TestError": "E-mail Test Mislukt",
-
-  "Settings.App.StartWithWindows": "Starten met Windows",
-  "Settings.App.MinimizeToTray": "Minimaliseren naar Systeemvak",
-  "Settings.App.StartMinimized": "Geminimaliseerd Starten",
-  "Settings.App.Language": "Taal:",
-
-  "Settings.About.Version": "Versie",
-  "Settings.About.Description": "Een Windows desktop applicatie die opgegeven programma's monitort en deze automatisch herstart als ze stoppen.",
-  "Settings.About.GitHub": "GitHub Repository",
-  "Settings.About.Copyright": "Copyright © 2025 Antik79",
-  "Settings.About.License": "Gelicentieerd onder de MIT License",
-  "Settings.About.TechStack": "Technologie Stack",
-  "Settings.About.Framework": "Framework: .NET 8.0",
-  "Settings.About.UI": "UI: WPF (Windows Presentation Foundation)",
-
-  "Export.Title": "Logs Exporteren",
-  "Export.Filter": "Tekstbestanden (*.txt)|*.txt|Logbestanden (*.log)|*.log|Alle Bestanden (*.*)|*.*",
-  "Export.Success": "Export Voltooid",
-  "Export.LogsExported": "Logs succesvol geëxporteerd!",
-  "Export.UILogsExported": "UI logs succesvol geëxporteerd!",
+  "Email.Body.Failed": "Het programma '{0}' is gestopt maar kon niet worden herstart.",
+  "Email.Body.Path": "Pad: {0}",
+  "Email.Body.Restarted": "Het programma '{0}' is gestopt en werd automatisch herstart.",
+  "Email.Body.Signature": "Dit is een geautomatiseerd bericht van RestartIt Applicatie Monitor.",
+  "Email.Body.Time": "Tijd: {0}",
+  "Email.Subject.Failed": "RestartIt: Herstart Mislukt - {0}",
+  "Email.Subject.Restart": "RestartIt: Programma Herstart - {0}",
   "Export.Error": "Exportfout",
   "Export.ErrorMessage": "Fout bij exporteren van logs: {0}",
-
-  "Tray.ShowWindow": "Venster Tonen",
-  "Tray.Exit": "Afsluiten",
-  "Tray.MinimizedMessage": "Applicatie geminimaliseerd naar systeemvak",
-
-  "Log.Started": "RestartIt succesvol gestart",
-  "Log.ShuttingDown": "RestartIt wordt afgesloten",
-  "Log.ProgramAdded": "Programma toegevoegd: {0}",
-  "Log.ProgramRemoved": "Programma verwijderd: {0}",
-  "Log.ProgramUpdated": "Instellingen bijgewerkt voor: {0}",
-  "Log.SettingsUpdated": "Instellingen bijgewerkt",
-  "Log.MonitoringEnabled": "Monitoring ingeschakeld voor: {0}",
-  "Log.MonitoringDisabled": "Monitoring uitgeschakeld voor: {0}",
+  "Export.Filter": "Tekstbestanden (*.txt)|*.txt|Logbestanden (*.log)|*.log|Alle Bestanden (*.*)|*.*",
+  "Export.LogsExported": "Logs succesvol geëxporteerd!",
+  "Export.Success": "Export Voltooid",
+  "Export.Title": "Logs Exporteren",
+  "Export.UILogsExported": "UI logs succesvol geëxporteerd!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Fout bij controleren of {0} actief is: {1}",
+  "Log.ErrorMonitoring": "Fout bij monitoren van {0}: {1}",
+  "Log.FailedToRestart": "Herstarten van {0} mislukt: {1}",
   "Log.LogsExported": "Logs geëxporteerd naar: {0}",
-  "Log.ProgramRestarted": "Programma herstart: {0}",
-  "Log.RestartFailed": "Programma herstarten mislukt: {0}",
+  "Log.MonitoringDisabled": "Monitoring uitgeschakeld voor: {0}",
+  "Log.MonitoringEnabled": "Monitoring ingeschakeld voor: {0}",
   "Log.ProcessNotFound": "Proces niet gevonden: {0}",
   "Log.ProcessRunning": "Proces actief: {0}",
+  "Log.ProgramAdded": "Programma toegevoegd: {0}",
   "Log.ProgramNotRunning": "{0} is niet actief. Herstarten over {1} seconden...",
-  "Log.ErrorMonitoring": "Fout bij monitoren van {0}: {1}",
-  "Log.ErrorCheckingProcess": "Fout bij controleren of {0} actief is: {1}",
+  "Log.ProgramRemoved": "Programma verwijderd: {0}",
+  "Log.ProgramRestarted": "Programma herstart: {0}",
+  "Log.ProgramUpdated": "Instellingen bijgewerkt voor: {0}",
+  "Log.RestartFailed": "Programma herstarten mislukt: {0}",
+  "Log.SettingsUpdated": "Instellingen bijgewerkt",
+  "Log.ShuttingDown": "RestartIt wordt afgesloten",
+  "Log.Started": "RestartIt succesvol gestart",
   "Log.SuccessfullyRestarted": "{0} succesvol herstart",
-  "Log.FailedToRestart": "Herstarten van {0} mislukt: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Programma Herstart - {0}",
-  "Email.Subject.Failed": "RestartIt: Herstart Mislukt - {0}",
-  "Email.Body.Restarted": "Het programma '{0}' is gestopt en werd automatisch herstart.",
-  "Email.Body.Failed": "Het programma '{0}' is gestopt maar kon niet worden herstart.",
-  "Email.Body.Time": "Tijd: {0}",
-  "Email.Body.Path": "Pad: {0}",
-  "Email.Body.Signature": "Dit is een geautomatiseerd bericht van RestartIt Applicatie Monitor."
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Activiteitenlog",
+  "MainWindow.AddProgram": "➕ Programma Toevoegen",
+  "MainWindow.ClearLog": "Log Wissen",
+  "MainWindow.ExportLogs": "Logs Exporteren",
+  "MainWindow.MonitoringActive": "Monitoring Actief",
+  "MainWindow.MonitoringStopped": "Monitoring Gestopt",
+  "MainWindow.Remove": "Verwijderen",
+  "MainWindow.Settings": "Instellingen",
+  "ProgramEdit.AddTitle": "Programma Toevoegen",
+  "ProgramEdit.Arguments": "Argumenten:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Bladeren...",
+  "ProgramEdit.CheckInterval": "Controle Interval (seconden):",
+  "ProgramEdit.ExecutablePath": "Uitvoerbaar Bestand:",
+  "ProgramEdit.InvalidDelay": "Herstart vertraging moet minimaal 1 seconde zijn.",
+  "ProgramEdit.InvalidInterval": "Controle interval moet minimaal 5 seconden zijn.",
+  "ProgramEdit.InvalidPath": "Selecteer een geldig uitvoerbaar bestand.",
+  "ProgramEdit.ProgramName": "Programmanaam:",
+  "ProgramEdit.ProgramNameRequired": "Programmanaam is verplicht.",
+  "ProgramEdit.RestartDelay": "Herstart Vertraging (seconden):",
+  "ProgramEdit.Title": "Programma Bewerken",
+  "ProgramEdit.ValidationError": "Validatiefout",
+  "ProgramEdit.WorkingDirectory": "Werkmap:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "Settings.About": "Over",
+  "Settings.About.Copyright": "Copyright © 2025 Antik79",
+  "Settings.About.Description": "Een Windows desktop applicatie die opgegeven programma's monitort en deze automatisch herstart als ze stoppen.",
+  "Settings.About.Framework": "Framework: .NET 8.0",
+  "Settings.About.GitHub": "GitHub Repository",
+  "Settings.About.License": "Gelicentieerd onder de MIT License",
+  "Settings.About.TechStack": "Technologie Stack",
+  "Settings.About.UI": "UI: WPF (Windows Presentation Foundation)",
+  "Settings.About.Version": "Versie",
+  "Settings.App.Language": "Taal:",
+  "Settings.App.MinimizeToTray": "Minimaliseren naar Systeemvak",
+  "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
+  "Settings.App.StartMinimized": "Geminimaliseerd Starten",
+  "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.StartWithWindows": "Starten met Windows",
+  "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
+  "Settings.Application": "Applicatie",
+  "Settings.Email.Enable": "E-mailmeldingen Inschakelen",
+  "Settings.Email.NotifyOnFailure": "Melding bij Herstart Fout",
+  "Settings.Email.NotifyOnRestart": "Melding bij Succesvolle Herstart",
+  "Settings.Email.RecipientEmail": "Ontvanger E-mail:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Afzender E-mail:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Afzender Naam:",
+  "Settings.Email.SenderPassword": "Afzender Wachtwoord:",
+  "Settings.Email.SmtpPort": "SMTP Poort:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "SMTP Server:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Test E-mail Verzenden",
+  "Settings.Email.TestError": "E-mail Test Mislukt",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Test E-mail Verzonden",
+  "Settings.Email.TestSuccessMessage": "Test e-mail succesvol verzonden! Controleer uw inbox.",
+  "Settings.Email.UseSsl": "SSL/TLS Gebruiken",
+  "Settings.EmailNotifications": "E-mailmeldingen",
+  "Settings.Logging": "Logboek",
+  "Settings.Logging.EnableFileLogging": "Bestandslogboek Inschakelen",
+  "Settings.Logging.KeepLogsFor": "Logs Bewaren Voor (dagen):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Logbestandspad:",
+  "Settings.Logging.MaxFileSize": "Max Bestandsgrootte (MB):",
+  "Settings.Logging.MinLogLevel": "Minimaal Logniveau:",
+  "Settings.Logging.OpenFolder": "Logmap Openen",
+  "Settings.Title": "Instellingen",
+  "Status.Failed": "Mislukt",
+  "Status.Restarting": "Herstarten",
+  "Status.Running": "Actief",
+  "Status.Stopped": "Gestopt",
+  "Status.Unknown": "Onbekend",
+  "Tray.Exit": "Afsluiten",
+  "Tray.MinimizedMessage": "Applicatie geminimaliseerd naar systeemvak",
+  "Tray.ShowWindow": "Venster Tonen",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
