--- a/Localization/sw.json
+++ b/Localization/sw.json
@@ -1,144 +1,157 @@
 {
   "_metadata": {
-  "code": "sw",
-  "name": "Swahili",
+    "code": "sw",
+    "name": "Swahili",
     "nativeName": "Kiswahili",
     "icon": "🇹🇿"
   },
-
   "App.Title": "RestartIt - Kichunguzi cha Programu",
   "App.TrayTitle": "RestartIt - Kichunguzi cha Programu",
-
-  "MainWindow.AddProgram": "➕ Ongeza Programu",
-  "MainWindow.Remove": "Ondoa",
-  "MainWindow.ExportLogs": "Hamisha Rekodi",
-  "MainWindow.Settings": "Mipangilio",
-  "MainWindow.MonitoringActive": "Ufuatiliaji Unafanya kazi",
-  "MainWindow.MonitoringStopped": "Ufuatiliaji Umekoma",
-  "MainWindow.ActivityLog": "Kumbukumbu ya Shughuli",
-  "MainWindow.ClearLog": "Futa Kumbukumbu",
-
-  "DataGrid.Enabled": "Imewezeshwa",
-  "DataGrid.ProgramName": "Jina la Programu",
-  "DataGrid.Path": "Njia",
+  "DataGrid.Actions": "Vitendo",
   "DataGrid.CheckInterval": "Muda wa Ukaguzi (sek)",
+  "DataGrid.Edit": "⚙ Hariri",
+  "DataGrid.Enabled": "Imewezeshwa",
+  "DataGrid.Path": "Njia",
+  "DataGrid.ProgramName": "Jina la Programu",
   "DataGrid.RestartDelay": "Chelezo la Kuanzisha Upya (sek)",
   "DataGrid.Status": "Hali",
-  "DataGrid.Actions": "Vitendo",
-  "DataGrid.Edit": "⚙ Hariri",
-
-  "Status.Running": "Inaendesha",
-  "Status.Stopped": "Imesimamishwa",
-  "Status.Restarting": "Inaanzisha Upya",
-  "Status.Failed": "Imeshindwa",
-  "Status.Unknown": "Haijulikani",
-
-  "Dialog.SelectProgram": "Chagua Programu ya Kufuatilia",
+  "Dialog.Apply": "Tekeleza",
+  "Dialog.Cancel": "Ghairi",
   "Dialog.ConfirmRemoval": "Thibitisha Kuondoa",
-  "Dialog.RemoveQuestion": "Una uhakika unataka kuondoa '{0}' kutoka kwenye ufuatiliaji?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Hapana",
   "Dialog.NoSelection": "Hakuna Maelezo",
+  "Dialog.OK": "Sawa",
+  "Dialog.RemoveQuestion": "Una uhakika unataka kuondoa '{0}' kutoka kwenye ufuatiliaji?",
+  "Dialog.SaveTestEmail": "Hifadhi na Jaribu Barua Pepe",
+  "Dialog.SelectProgram": "Chagua Programu ya Kufuatilia",
   "Dialog.SelectProgramFirst": "Tafadhali chagua programu ya kuondoa kwanza.",
   "Dialog.Yes": "Ndiyo",
-  "Dialog.No": "Hapana",
-  "Dialog.OK": "Sawa",
-  "Dialog.Cancel": "Ghairi",
-  "Dialog.Apply": "Tekeleza",
-  "Dialog.SaveTestEmail": "Hifadhi na Jaribu Barua Pepe",
-
-  "ProgramEdit.Title": "Hariri Programu",
+  "Email.Body.Failed": "Programu '{0}' imeacha kuendesha lakini haikuweza kuanzishwa upya.",
+  "Email.Body.Path": "Njia: {0}",
+  "Email.Body.Restarted": "Programu '{0}' imeacha kuendesha na imeanzishwa upya kiotomatiki.",
+  "Email.Body.Signature": "Ujumbe huu umetumwa kiotomatiki kutoka RestartIt Application Monitor.",
+  "Email.Body.Time": "Muda: {0}",
+  "Email.Subject.Failed": "RestartIt: Uanzishaji Upya Umeshindwa - {0}",
+  "Email.Subject.Restart": "RestartIt: Programu Imeanzishwa Upya - {0}",
+  "Export.Error": "Hitilafu ya Uhamisho",
+  "Export.ErrorMessage": "Hitilafu wakati wa kuhamisha rekodi: {0}",
+  "Export.Filter": "Faili za Maandishi (*.txt)|*.txt|Faili za Rekodi (*.log)|*.log|Faili Zote (*.*)|*.*",
+  "Export.LogsExported": "Rekodi zimehamishwa kwa mafanikio!",
+  "Export.Success": "Uhamisho Umekamilika",
+  "Export.Title": "Hamisha Rekodi",
+  "Export.UILogsExported": "Rekodi za UI zimehamishwa kwa mafanikio!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Hitilafu wakati wa kuangalia ikiwa {0} inaendesha: {1}",
+  "Log.ErrorMonitoring": "Hitilafu wakati wa kufuatilia {0}: {1}",
+  "Log.FailedToRestart": "Imeshindwa kuanzisha {0} upya: {1}",
+  "Log.LogsExported": "Rekodi zimehamishwa kwenda: {0}",
+  "Log.MonitoringDisabled": "Ufuatiliaji umesimamishwa kwa: {0}",
+  "Log.MonitoringEnabled": "Ufuatiliaji umewezeshwa kwa: {0}",
+  "Log.ProcessNotFound": "Mchakato haupatikani: {0}",
+  "Log.ProcessRunning": "Mchakato unaendesha: {0}",
+  "Log.ProgramAdded": "Programu imeongezwa: {0}",
+  "Log.ProgramNotRunning": "{0} haiendeleshi. Inaanzisha upya baada ya sekunde {1}...",
+  "Log.ProgramRemoved": "Programu imeondolewa: {0}",
+  "Log.ProgramRestarted": "Programu imeanzishwa upya: {0}",
+  "Log.ProgramUpdated": "Mipangilio imesasishwa kwa: {0}",
+  "Log.RestartFailed": "Imeshindwa kuanzisha upya programu: {0}",
+  "Log.SettingsUpdated": "Mipangilio imesasishwa",
+  "Log.ShuttingDown": "RestartIt inazima",
+  "Log.Started": "RestartIt imeanza kwa mafanikio",
+  "Log.SuccessfullyRestarted": "{0} imeanzishwa upya kwa mafanikio",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Kumbukumbu ya Shughuli",
+  "MainWindow.AddProgram": "➕ Ongeza Programu",
+  "MainWindow.ClearLog": "Futa Kumbukumbu",
+  "MainWindow.ExportLogs": "Hamisha Rekodi",
+  "MainWindow.MonitoringActive": "Ufuatiliaji Unafanya kazi",
+  "MainWindow.MonitoringStopped": "Ufuatiliaji Umekoma",
+  "MainWindow.Remove": "Ondoa",
+  "MainWindow.Settings": "Mipangilio",
   "ProgramEdit.AddTitle": "Ongeza Programu",
-  "ProgramEdit.ProgramName": "Jina la Programu:",
-  "ProgramEdit.ExecutablePath": "Njia ya Faili Inayotendeka:",
-  "ProgramEdit.Browse": "Vinjari...",
   "ProgramEdit.Arguments": "Hoja:",
-  "ProgramEdit.WorkingDirectory": "Saraka ya Kazi:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Vinjari...",
   "ProgramEdit.CheckInterval": "Muda wa Ukaguzi (sekunde):",
-  "ProgramEdit.RestartDelay": "Chelezo la Kuanzisha Upya (sekunde):",
-  "ProgramEdit.ValidationError": "Hitilafu ya Uthibitishaji",
-  "ProgramEdit.ProgramNameRequired": "Jina la programu linahitajika.",
-  "ProgramEdit.InvalidPath": "Tafadhali chagua faili inayoweza kutekelezwa sahihi.",
-  "ProgramEdit.InvalidInterval": "Muda wa ukaguzi lazima uwe angalau sekunde 5.",
+  "ProgramEdit.ExecutablePath": "Njia ya Faili Inayotendeka:",
   "ProgramEdit.InvalidDelay": "Chelezo la kuanzisha upya lazima iwe angalau sekunde 1.",
-
-  "Settings.Title": "Mipangilio",
-  "Settings.Logging": "Ukaratasi",
-  "Settings.EmailNotifications": "Arifa za Barua Pepe",
-  "Settings.Application": "Programu",
+  "ProgramEdit.InvalidInterval": "Muda wa ukaguzi lazima uwe angalau sekunde 5.",
+  "ProgramEdit.InvalidPath": "Tafadhali chagua faili inayoweza kutekelezwa sahihi.",
+  "ProgramEdit.ProgramName": "Jina la Programu:",
+  "ProgramEdit.ProgramNameRequired": "Jina la programu linahitajika.",
+  "ProgramEdit.RestartDelay": "Chelezo la Kuanzisha Upya (sekunde):",
+  "ProgramEdit.Title": "Hariri Programu",
+  "ProgramEdit.ValidationError": "Hitilafu ya Uthibitishaji",
+  "ProgramEdit.WorkingDirectory": "Saraka ya Kazi:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
   "Settings.About": "Kuhusu",
-
-  "Settings.Logging.EnableFileLogging": "Washa Ukaratasi wa Faili",
-  "Settings.Logging.LogFilePath": "Njia ya Faili la Kirokodi:",
-  "Settings.Logging.MinLogLevel": "Kiwango cha Kirokodi cha Chini:",
-  "Settings.Logging.MaxFileSize": "Ukubwa wa Ju wa Faili (MB):",
-  "Settings.Logging.KeepLogsFor": "Hifadhi Kirokodi kwa (siku):",
-  "Settings.Logging.OpenFolder": "Fungua Folda ya Kirokodi",
-
-  "Settings.Email.Enable": "Washa Arifa za Barua Pepe",
-  "Settings.Email.SmtpServer": "Seva ya SMTP:",
-  "Settings.Email.SmtpPort": "Bandari ya SMTP:",
-  "Settings.Email.UseSsl": "Tumia SSL/TLS",
-  "Settings.Email.SenderEmail": "Barua pepe ya Mtumaji:",
-  "Settings.Email.SenderName": "Jina la Mtumaji:",
-  "Settings.Email.SenderPasword": "Nenosiri la Mtumaji:",
-  "Settings.Email.RecipientEmail": "Barua pepe ya Mpokeaji:",
-  "Settings.Email.NotifyOnRestart": "Arifu wakati wa Kuanzisha Upya Mafanikio",
-  "Settings.Email.NotifyOnFailure": "Arifu wakati wa Kushindwa Kuanzisha Upya",
-  "Settings.Email.TestEmail": "Tuma Barua Pepe ya Majaribio",
-  "Settings.Email.TestSuccess": "Barua Pepe ya Majaribio Imetumwa",
-  "Settings.Email.TestSuccessMessage": "Barua pepe ya majaribio imetumwa kwa mafanikio! Angalia kisanduku pokezi chako.",
-  "Settings.Email.TestError": "Kujaribu Barua Pepe Imeshindwa",
-
-  "Settings.App.StartWithWindows": "Anzisha Pamoja na Windows",
-  "Settings.App.StartWithWindowsDesc": "Anzisha RestartIt kiotomatiki Windows inapozinduka.",
+  "Settings.About.Copyright": "Haki miliki © 2025 Antik79",
+  "Settings.About.Description": "Programu ya mezani ya Windows inayofuatilia programu zilizochaguliwa na kuzianzisha upya kiotomatiki ikiwa zitasimamishwa.",
+  "Settings.About.GitHub": "Ghithub Repository",
+  "Settings.About.License": "Imeshehadhiwa chini ya Leseni ya MIT",
+  "Settings.About.TechStack": "Imejengwa kwa .NET 8.0 na WPF",
+  "Settings.About.Version": "Toleo",
+  "Settings.App.Language": "Lugha:",
   "Settings.App.MinimizeToTray": "Punguza hadi Tray",
   "Settings.App.MinimizeToTrayDesc": "Ukipunguza, programu itaondoka kwenye kipengele cha mfumo badala ya upau wa majukumu.",
   "Settings.App.StartMinimized": "Anzisha Ikipunguzwa",
   "Settings.App.StartMinimizedDesc": "Anzisha RestartIt ikipunguzwa kwenye tray (inahitajika 'Punguza hadi Tray' kuwezeshwa).",
-  "Settings.App.Language": "Lugha:",
-
-  "Settings.About.Version": "Toleo",
-  "Settings.About.Description": "Programu ya mezani ya Windows inayofuatilia programu zilizochaguliwa na kuzianzisha upya kiotomatiki ikiwa zitasimamishwa.",
-  "Settings.About.GitHub": "Ghithub Repository",
-  "Settings.About.Copyright": "Haki miliki © 2025 Antik79",
-  "Settings.About.License": "Imeshehadhiwa chini ya Leseni ya MIT",
-  "Settings.About.TechStack": "Imejengwa kwa .NET 8.0 na WPF",
-
-  "Export.Title": "Hamisha Rekodi",
-  "Export.Filter": "Faili za Maandishi (*.txt)|*.txt|Faili za Rekodi (*.log)|*.log|Faili Zote (*.*)|*.*",
-  "Export.Success": "Uhamisho Umekamilika",
-  "Export.LogsExported": "Rekodi zimehamishwa kwa mafanikio!",
-  "Export.UILogsExported": "Rekodi za UI zimehamishwa kwa mafanikio!",
-  "Export.Error": "Hitilafu ya Uhamisho",
-  "Export.ErrorMessage": "Hitilafu wakati wa kuhamisha rekodi: {0}",
-
-  "Tray.ShowWindow": "Onyesha Dirisha",
+  "Settings.App.StartWithWindows": "Anzisha Pamoja na Windows",
+  "Settings.App.StartWithWindowsDesc": "Anzisha RestartIt kiotomatiki Windows inapozinduka.",
+  "Settings.Application": "Programu",
+  "Settings.Email.Enable": "Washa Arifa za Barua Pepe",
+  "Settings.Email.NotifyOnFailure": "Arifu wakati wa Kushindwa Kuanzisha Upya",
+  "Settings.Email.NotifyOnRestart": "Arifu wakati wa Kuanzisha Upya Mafanikio",
+  "Settings.Email.RecipientEmail": "Barua pepe ya Mpokeaji:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Barua pepe ya Mtumaji:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Jina la Mtumaji:",
+  "Settings.Email.SenderPassword": "Sender Password:",
+  "Settings.Email.SenderPasword": "Nenosiri la Mtumaji:",
+  "Settings.Email.SmtpPort": "Bandari ya SMTP:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "Seva ya SMTP:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Tuma Barua Pepe ya Majaribio",
+  "Settings.Email.TestError": "Kujaribu Barua Pepe Imeshindwa",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Barua Pepe ya Majaribio Imetumwa",
+  "Settings.Email.TestSuccessMessage": "Barua pepe ya majaribio imetumwa kwa mafanikio! Angalia kisanduku pokezi chako.",
+  "Settings.Email.UseSsl": "Tumia SSL/TLS",
+  "Settings.EmailNotifications": "Arifa za Barua Pepe",
+  "Settings.Logging": "Ukaratasi",
+  "Settings.Logging.EnableFileLogging": "Washa Ukaratasi wa Faili",
+  "Settings.Logging.KeepLogsFor": "Hifadhi Kirokodi kwa (siku):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Njia ya Faili la Kirokodi:",
+  "Settings.Logging.MaxFileSize": "Ukubwa wa Ju wa Faili (MB):",
+  "Settings.Logging.MinLogLevel": "Kiwango cha Kirokodi cha Chini:",
+  "Settings.Logging.OpenFolder": "Fungua Folda ya Kirokodi",
+  "Settings.Title": "Mipangilio",
+  "Status.Failed": "Imeshindwa",
+  "Status.Restarting": "Inaanzisha Upya",
+  "Status.Running": "Inaendesha",
+  "Status.Stopped": "Imesimamishwa",
+  "Status.Unknown": "Haijulikani",
   "Tray.Exit": "Toka",
   "Tray.MinimizedMessage": "Programu imepunguzwa kwenye tray",
-
-  "Log.Started": "RestartIt imeanza kwa mafanikio",
-  "Log.ShuttingDown": "RestartIt inazima",
-  "Log.ProgramAdded": "Programu imeongezwa: {0}",
-  "Log.ProgramRemoved": "Programu imeondolewa: {0}",
-  "Log.ProgramUpdated": "Mipangilio imesasishwa kwa: {0}",
-  "Log.SettingsUpdated": "Mipangilio imesasishwa",
-  "Log.MonitoringEnabled": "Ufuatiliaji umewezeshwa kwa: {0}",
-  "Log.MonitoringDisabled": "Ufuatiliaji umesimamishwa kwa: {0}",
-  "Log.LogsExported": "Rekodi zimehamishwa kwenda: {0}",
-  "Log.ProgramRestarted": "Programu imeanzishwa upya: {0}",
-  "Log.RestartFailed": "Imeshindwa kuanzisha upya programu: {0}",
-  "Log.ProcessNotFound": "Mchakato haupatikani: {0}",
-  "Log.ProcessRunning": "Mchakato unaendesha: {0}",
-  "Log.ProgramNotRunning": "{0} haiendeleshi. Inaanzisha upya baada ya sekunde {1}...",
-  "Log.ErrorMonitoring": "Hitilafu wakati wa kufuatilia {0}: {1}",
-  "Log.ErrorCheckingProcess": "Hitilafu wakati wa kuangalia ikiwa {0} inaendesha: {1}",
-  "Log.SuccessfullyRestarted": "{0} imeanzishwa upya kwa mafanikio",
-  "Log.FailedToRestart": "Imeshindwa kuanzisha {0} upya: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Programu Imeanzishwa Upya - {0}",
-  "Email.Subject.Failed": "RestartIt: Uanzishaji Upya Umeshindwa - {0}",
-  "Email.Body.Restarted": "Programu '{0}' imeacha kuendesha na imeanzishwa upya kiotomatiki.",
-  "Email.Body.Failed": "Programu '{0}' imeacha kuendesha lakini haikuweza kuanzishwa upya.",
-  "Email.Body.Time": "Muda: {0}",
-  "Email.Body.Path": "Njia: {0}",
-  "Email.Body.Signature": "Ujumbe huu umetumwa kiotomatiki kutoka RestartIt Application Monitor."
+  "Tray.ShowWindow": "Onyesha Dirisha",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
