--- a/Localization/el.json
+++ b/Localization/el.json
@@ -3,142 +3,155 @@
     "code": "el",
     "name": "Greek",
     "nativeName": "Ελληνικά",
-  "icon": "🇬🇷"
+    "icon": "🇬🇷"
   },
-
   "App.Title": "RestartIt - Εφαρμογή Παρακολούθησης",
   "App.TrayTitle": "RestartIt - Εφαρμογή Παρακολούθησης",
-
-  "MainWindow.AddProgram": "➕ Προσθήκη Προγράμματος",
-  "MainWindow.Remove": "Αφαίρεση",
-  "MainWindow.ExportLogs": "Εξαγωγή Καταγραφών",
-  "MainWindow.Setings": "Ρυθμίσεις",
-  "MainWindow.MonitoringActive": "Η παρακολούθηση είναι ενεργή",
-  "MainWindow.MonitoringStopped": "Η παρακολούθηση σταμάτησε",
-  "MainWindow.ActivityLog": "Καταγραφή Δραστηριότητας",
-  "MainWindow.ClearLog": "Καθαρισμός Καταγραφής",
-
-  "DataGrid.Enabled": "Ενεργό",
-  "DataGrid.ProgramName": "Όνομα Προγράμματος",
-  "DataGrid.Path": "Διαδρομή",
+  "DataGrid.Actions": "Ενέργειες",
   "DataGrid.CheckInterval": "Διάστημα Ελέγχου (δευτ.)",
+  "DataGrid.Edit": "⚙ Επεξεργασία",
+  "DataGrid.Enabled": "Ενεργό",
+  "DataGrid.Path": "Διαδρομή",
+  "DataGrid.ProgramName": "Όνομα Προγράμματος",
   "DataGrid.RestartDelay": "Καθυστέρηση Επανεκκίνησης (δευτ.)",
   "DataGrid.Status": "Κατάσταση",
-  "DataGrid.Actions": "Ενέργειες",
-  "DataGrid.Edit": "⚙ Επεξεργασία",
-
-  "Status.Running": "Σε λειτουργία",
-  "Status.Stopped": "Σταματημένο",
-  "Status.Restarting": "Επανεκκίνηση",
-  "Status.Failed": "Απέτυχε",
-  "Status.Unknown": "Άγνωστο",
-
-  "Dialog.SelectProgram": "Επιλογή Προγράμματος για Παρακολούθηση",
+  "Dialog.Apply": "Εφαρμογή",
+  "Dialog.Cancel": "Ακύρωση",
   "Dialog.ConfirmRemoval": "Επιβεβαίωση Αφαίρεσης",
-  "Dialog.RemoveQuestion": "Είστε σίγουροι ότι θέλετε να αφαιρέσετε το «{0}» από την παρακολούθηση;",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Όχι",
   "Dialog.NoSelection": "Καμία Επιλογή",
+  "Dialog.OK": "OK",
+  "Dialog.RemoveQuestion": "Είστε σίγουροι ότι θέλετε να αφαιρέσετε το «{0}» από την παρακολούθηση;",
+  "Dialog.SaveTestEmail": "Αποθήκευση & Δοκιμή Email",
+  "Dialog.SelectProgram": "Επιλογή Προγράμματος για Παρακολούθηση",
   "Dialog.SelectProgramFirst": "Παρακαλώ επιλέξτε πρώτα ένα πρόγραμμα προς αφαίρεση.",
   "Dialog.Yes": "Ναι",
-  "Dialog.No": "Όχι",
-  "Dialog.OK": "OK",
-  "Dialog.Cancel": "Ακύρωση",
-  "Dialog.Apply": "Εφαρμογή",
-  "Dialog.SaveTestEmail": "Αποθήκευση & Δοκιμή Email",
-
-  "ProgramEdit.Title": "Επεξεργασία Προγράμματος",
+  "Email.Body.Failed": "Το πρόγραμμα «{0}» σταμάτησε αλλά δεν μπόρεσε να επανεκκινηθεί.",
+  "Email.Body.Path": "Διαδρομή: {0}",
+  "Email.Body.Restarted": "Το πρόγραμμα «{0}» σταμάτησε και επανεκκινήθηκε αυτόματα.",
+  "Email.Body.Signature": "Αυτό το μήνυμα δημιουργήθηκε αυτόματα από το RestartIt Application Monitor.",
+  "Email.Body.Time": "Ώρα: {0}",
+  "Email.Subject.Failed": "RestartIt: Αποτυχία Επανεκκίνησης - {0}",
+  "Email.Subject.Restart": "RestartIt: Πρόγραμμα Επανεκκινήθηκε - {0}",
+  "Export.Error": "Σφάλμα Εξαγωγής",
+  "Export.ErrorMessage": "Σφάλμα κατά την εξαγωγή των καταγραφών: {0}",
+  "Export.Filter": "Αρχεία Κειμένου (*.txt)|*.txt|Αρχεία Καταγραφής (*.log)|*.log|Όλα τα Αρχεία (*.*)|*.*",
+  "Export.LogsExported": "Οι καταγραφές εξήχθησαν επιτυχώς!",
+  "Export.Success": "Εξαγωγή Ολοκληρώθηκε",
+  "Export.Title": "Εξαγωγή Καταγραφών",
+  "Export.UILogsExported": "Οι UI καταγραφές εξήχθησαν επιτυχώς!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Σφάλμα κατά τον έλεγχο εάν εκτελείται το {0}: {1}",
+  "Log.ErrorMonitoring": "Σφάλμα παρακολούθησης {0}: {1}",
+  "Log.FailedToRestart": "Αποτυχία επανεκκίνησης του {0}: {1}",
+  "Log.LogsExported": "Οι καταγραφές εξήχθησαν στο: {0}",
+  "Log.MonitoringDisabled": "Η παρακολούθηση απενεργοποιήθηκε για: {0}",
+  "Log.MonitoringEnabled": "Η παρακολούθηση ενεργοποιήθηκε για: {0}",
+  "Log.ProcessNotFound": "Δε βρέθηκε διαδικασία: {0}",
+  "Log.ProcessRunning": "Διεργασία σε εκτέλεση: {0}",
+  "Log.ProgramAdded": "Πρόγραμμα προστέθηκε: {0}",
+  "Log.ProgramNotRunning": "Το {0} δεν εκτελείται. Επανεκκίνηση σε {1} δευτερόλεπτα...",
+  "Log.ProgramRemoved": "Πρόγραμμα αφαιρέθηκε: {0}",
+  "Log.ProgramRestarted": "Το πρόγραμμα επανεκκινήθηκε: {0}",
+  "Log.ProgramUpdated": "Ενημερώθηκαν οι ρυθμίσεις για: {0}",
+  "Log.RestartFailed": "Αποτυχία επανεκκίνησης προγράμματος: {0}",
+  "Log.SettingsUpdated": "Οι ρυθμίσεις ενημερώθηκαν",
+  "Log.ShuttingDown": "Τερματισμός του RestartIt",
+  "Log.Started": "Το RestartIt ξεκίνησε επιτυχώς",
+  "Log.SuccessfullyRestarted": "Επιτυχής επανεκκίνηση του {0}",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Καταγραφή Δραστηριότητας",
+  "MainWindow.AddProgram": "➕ Προσθήκη Προγράμματος",
+  "MainWindow.ClearLog": "Καθαρισμός Καταγραφής",
+  "MainWindow.ExportLogs": "Εξαγωγή Καταγραφών",
+  "MainWindow.MonitoringActive": "Η παρακολούθηση είναι ενεργή",
+  "MainWindow.MonitoringStopped": "Η παρακολούθηση σταμάτησε",
+  "MainWindow.Remove": "Αφαίρεση",
+  "MainWindow.Setings": "Ρυθμίσεις",
+  "MainWindow.Settings": "Settings",
   "ProgramEdit.AddTitle": "Προσθήκη Προγράμματος",
-  "ProgramEdit.ProgramName": "Όνομα Προγράμματος:",
-  "ProgramEdit.ExecutablePath": "Διαδρομή Εκτελέσιμου:",
-  "ProgramEdit.Browse": "Περιήγηση...",
   "ProgramEdit.Arguments": "Ορίσματα:",
-  "ProgramEdit.WorkingDirectory": "Φάκελος Εργασίας:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Περιήγηση...",
   "ProgramEdit.CheckInterval": "Διάστημα Ελέγχου (δευτερόλεπτα):",
-  "ProgramEdit.RestartDelay": "Καθυστέρηση Επανεκκίνησης (δευτερόλεπτα):",
-  "ProgramEdit.ValidationError": "Σφάλμα Επικύρωσης",
-  "ProgramEdit.ProgramNameRequired": "Το όνομα του προγράμματος είναι υποχρεωτικό.",
-  "ProgramEdit.InvalidPath": "Παρακαλώ επιλέξτε έγκυρο εκτελέσιμο αρχείο.",
-  "ProgramEdit.InvalidInterval": "Το διάστημα ελέγχου πρέπει να είναι τουλάχιστον 5 δευτερόλεπτα.",
+  "ProgramEdit.ExecutablePath": "Διαδρομή Εκτελέσιμου:",
   "ProgramEdit.InvalidDelay": "Η καθυστέρηση επανεκκίνησης πρέπει να είναι τουλάχιστον 1 δευτερόλεπτο.",
-
-  "Settings.Title": "Ρυθμίσεις",
-  "Settings.Logging": "Καταγραφή",
-  "Settings.EmailNotifications": "Ειδοποιήσεις Email",
-  "Settings.Application": "Εφαρμογή",
+  "ProgramEdit.InvalidInterval": "Το διάστημα ελέγχου πρέπει να είναι τουλάχιστον 5 δευτερόλεπτα.",
+  "ProgramEdit.InvalidPath": "Παρακαλώ επιλέξτε έγκυρο εκτελέσιμο αρχείο.",
+  "ProgramEdit.ProgramName": "Όνομα Προγράμματος:",
+  "ProgramEdit.ProgramNameRequired": "Το όνομα του προγράμματος είναι υποχρεωτικό.",
+  "ProgramEdit.RestartDelay": "Καθυστέρηση Επανεκκίνησης (δευτερόλεπτα):",
+  "ProgramEdit.Title": "Επεξεργασία Προγράμματος",
+  "ProgramEdit.ValidationError": "Σφάλμα Επικύρωσης",
+  "ProgramEdit.WorkingDirectory": "Φάκελος Εργασίας:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
   "Settings.About": "Σχετικά",
-
-  "Settings.Logging.EnableFileLogging": "Ενεργοποίηση Καταγραφής σε Αρχείο",
-  "Settings.Logging.LogFilePath": "Διαδρομή Αρχείου Καταγραφής:",
-  "Settings.Logging.MinLogLevel": "Ελάχιστο Επίπεδο Καταγραφής:",
-  "Settings.Logging.MaxFileSize": "Μέγιστο Μέγεθος Αρχείου (MB):",
-  "Settings.Logging.KeepLogsFor": "Διατήρηση Καταγραφών (ημέρες):",
-  "Settings.Logging.OpenFolder": "Άνοιγμα Φακέλου Καταγραφών",
-
-  "Settings.Email.Enable": "Ενεργοποίηση Ειδοποιήσεων Email",
-  "Settings.Email.SmtpServer": "Διακομιστής SMTP:",
-  "Settings.Email.SmtpPort": "Θύρα SMTP:",
-  "Settings.Email.UseSsl": "Χρήση SSL/TLS",
-  "Settings.Email.SenderEmail": "Email Αποστολέα:",
-  "Settings.Email.SenderName": "Όνομα Αποστολέα:",
-  "Settings.Email.SenderPassword": "Κωδικός Αποστολέα:",
-  "Settings.Email.RecipientEmail": "Email Παραλήπτη:",
-  "Settings.Email.NotifyOnRestart": "Ειδοποίηση σε Επιτυχή Επανεκκίνηση",
-  "Settings.Email.NotifyOnFailure": "Ειδοποίηση σε Αποτυχία Επανεκκίνησης",
-  "Settings.Email.TestEmail": "Αποστολή Δοκιμαστικού Email",
-  "Settings.Email.TestSuccess": "Δοκιμαστικό Email Στάλθηκε",
-  "Settings.Email.TestSuccessMessage": "Το δοκιμαστικό email στάλθηκε με επιτυχία! Ελέγξτε τα εισερχόμενά σας.",
-  "Settings.Email.TestError": "Αποτυχία Δοκιμαστικού Email",
-
-  "Settings.App.StartWithWindows": "Έναρξη με τα Windows",
-  "Settings.App.StartWithWindowsDesc": "Αυτόματη εκκίνηση του RestartIt κατά την εκκίνηση των Windows.",
+  "Settings.About.Copyright": "Copyright © 2025 Antik79",
+  "Settings.About.Description": "Μια εφαρμογή Windows που παρακολουθεί καθορισμένα προγράμματα και τα επανεκκινεί αυτόματα αν σταματήσουν να τρέχουν.",
+  "Settings.About.GitHub": "Αποθετήριο GitHub",
+  "Settings.About.License": "Αδειοδοτημένο υπό την άδεια MIT",
+  "Settings.About.TechStack": "Κατασκευασμένο με .NET 8.0 και WPF",
+  "Settings.About.Version": "Έκδοση",
+  "Settings.App.Language": "Γλώσσα:",
   "Settings.App.MinimizeToTray": "Ελαχιστοποίηση στη Συμβολοθήκη",
   "Settings.App.MinimizeToTrayDesc": "Όταν ελαχιστοποιείται, η εφαρμογή κρύβεται στη συστοιχία αντί στην γραμμή εργασιών.",
   "Settings.App.StartMinimized": "Έναρξη Ελαχιστοποιημένο",
   "Settings.App.StartMinimizedDesc": "Έναρξη του RestartIt ελαχιστοποιημένου στη συστοιχία (απαιτεί τη δυνατότητα «Ελαχιστοποίηση στη Συμβολοθήκη»).",
-  "Settings.App.Language": "Γλώσσα:",
-
-  "Settings.About.Version": "Έκδοση",
-  "Settings.About.Description": "Μια εφαρμογή Windows που παρακολουθεί καθορισμένα προγράμματα και τα επανεκκινεί αυτόματα αν σταματήσουν να τρέχουν.",
-  "Settings.About.GitHub": "Αποθετήριο GitHub",
-  "Settings.About.Copyright": "Copyright © 2025 Antik79",
-  "Settings.About.License": "Αδειοδοτημένο υπό την άδεια MIT",
-  "Settings.About.TechStack": "Κατασκευασμένο με .NET 8.0 και WPF",
-
-  "Export.Title": "Εξαγωγή Καταγραφών",
-  "Export.Filter": "Αρχεία Κειμένου (*.txt)|*.txt|Αρχεία Καταγραφής (*.log)|*.log|Όλα τα Αρχεία (*.*)|*.*",
-  "Export.Success": "Εξαγωγή Ολοκληρώθηκε",
-  "Export.LogsExported": "Οι καταγραφές εξήχθησαν επιτυχώς!",
-  "Export.UILogsExported": "Οι UI καταγραφές εξήχθησαν επιτυχώς!",
-  "Export.Error": "Σφάλμα Εξαγωγής",
-  "Export.ErrorMessage": "Σφάλμα κατά την εξαγωγή των καταγραφών: {0}",
-
-  "Tray.ShowWindow": "Εμφάνιση Παραθύρου",
+  "Settings.App.StartWithWindows": "Έναρξη με τα Windows",
+  "Settings.App.StartWithWindowsDesc": "Αυτόματη εκκίνηση του RestartIt κατά την εκκίνηση των Windows.",
+  "Settings.Application": "Εφαρμογή",
+  "Settings.Email.Enable": "Ενεργοποίηση Ειδοποιήσεων Email",
+  "Settings.Email.NotifyOnFailure": "Ειδοποίηση σε Αποτυχία Επανεκκίνησης",
+  "Settings.Email.NotifyOnRestart": "Ειδοποίηση σε Επιτυχή Επανεκκίνηση",
+  "Settings.Email.RecipientEmail": "Email Παραλήπτη:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Email Αποστολέα:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Όνομα Αποστολέα:",
+  "Settings.Email.SenderPassword": "Κωδικός Αποστολέα:",
+  "Settings.Email.SmtpPort": "Θύρα SMTP:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "Διακομιστής SMTP:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Αποστολή Δοκιμαστικού Email",
+  "Settings.Email.TestError": "Αποτυχία Δοκιμαστικού Email",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Δοκιμαστικό Email Στάλθηκε",
+  "Settings.Email.TestSuccessMessage": "Το δοκιμαστικό email στάλθηκε με επιτυχία! Ελέγξτε τα εισερχόμενά σας.",
+  "Settings.Email.UseSsl": "Χρήση SSL/TLS",
+  "Settings.EmailNotifications": "Ειδοποιήσεις Email",
+  "Settings.Logging": "Καταγραφή",
+  "Settings.Logging.EnableFileLogging": "Ενεργοποίηση Καταγραφής σε Αρχείο",
+  "Settings.Logging.KeepLogsFor": "Διατήρηση Καταγραφών (ημέρες):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Διαδρομή Αρχείου Καταγραφής:",
+  "Settings.Logging.MaxFileSize": "Μέγιστο Μέγεθος Αρχείου (MB):",
+  "Settings.Logging.MinLogLevel": "Ελάχιστο Επίπεδο Καταγραφής:",
+  "Settings.Logging.OpenFolder": "Άνοιγμα Φακέλου Καταγραφών",
+  "Settings.Title": "Ρυθμίσεις",
+  "Status.Failed": "Απέτυχε",
+  "Status.Restarting": "Επανεκκίνηση",
+  "Status.Running": "Σε λειτουργία",
+  "Status.Stopped": "Σταματημένο",
+  "Status.Unknown": "Άγνωστο",
   "Tray.Exit": "Έξοδος",
   "Tray.MinimizedMessage": "Η εφαρμογή ελαχιστοποιήθηκε στη συστοιχία",
-
-  "Log.Started": "Το RestartIt ξεκίνησε επιτυχώς",
-  "Log.ShuttingDown": "Τερματισμός του RestartIt",
-  "Log.ProgramAdded": "Πρόγραμμα προστέθηκε: {0}",
-  "Log.ProgramRemoved": "Πρόγραμμα αφαιρέθηκε: {0}",
-  "Log.ProgramUpdated": "Ενημερώθηκαν οι ρυθμίσεις για: {0}",
-  "Log.SettingsUpdated": "Οι ρυθμίσεις ενημερώθηκαν",
-  "Log.MonitoringEnabled": "Η παρακολούθηση ενεργοποιήθηκε για: {0}",
-  "Log.MonitoringDisabled": "Η παρακολούθηση απενεργοποιήθηκε για: {0}",
-  "Log.LogsExported": "Οι καταγραφές εξήχθησαν στο: {0}",
-  "Log.ProgramRestarted": "Το πρόγραμμα επανεκκινήθηκε: {0}",
-  "Log.RestartFailed": "Αποτυχία επανεκκίνησης προγράμματος: {0}",
-  "Log.ProcessNotFound": "Δε βρέθηκε διαδικασία: {0}",
-  "Log.ProcessRunning": "Διεργασία σε εκτέλεση: {0}",
-  "Log.ProgramNotRunning": "Το {0} δεν εκτελείται. Επανεκκίνηση σε {1} δευτερόλεπτα...",
-  "Log.ErrorMonitoring": "Σφάλμα παρακολούθησης {0}: {1}",
-  "Log.ErrorCheckingProcess": "Σφάλμα κατά τον έλεγχο εάν εκτελείται το {0}: {1}",
-  "Log.SuccessfullyRestarted": "Επιτυχής επανεκκίνηση του {0}",
-  "Log.FailedToRestart": "Αποτυχία επανεκκίνησης του {0}: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Πρόγραμμα Επανεκκινήθηκε - {0}",
-  "Email.Subject.Failed": "RestartIt: Αποτυχία Επανεκκίνησης - {0}",
-  "Email.Body.Restarted": "Το πρόγραμμα «{0}» σταμάτησε και επανεκκινήθηκε αυτόματα.",
-  "Email.Body.Failed": "Το πρόγραμμα «{0}» σταμάτησε αλλά δεν μπόρεσε να επανεκκινηθεί.",
-  "Email.Body.Time": "Ώρα: {0}",
-  "Email.Body.Path": "Διαδρομή: {0}",
-  "Email.Body.Signature": "Αυτό το μήνυμα δημιουργήθηκε αυτόματα από το RestartIt Application Monitor."
+  "Tray.ShowWindow": "Εμφάνιση Παραθύρου",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
