--- a/Localization/fr.json
+++ b/Localization/fr.json
@@ -7,136 +7,152 @@
   },
   "App.Title": "RestartIt - Moniteur d'Applications",
   "App.TrayTitle": "RestartIt - Moniteur d'Applications",
-
-  "MainWindow.AddProgram": "➕ Ajouter un Programme",
-  "MainWindow.Remove": "Supprimer",
-  "MainWindow.ExportLogs": "Exporter les Journaux",
-  "MainWindow.Settings": "Paramètres",
-  "MainWindow.MonitoringActive": "Surveillance Active",
-  "MainWindow.MonitoringStopped": "Surveillance Arrêtée",
-  "MainWindow.ActivityLog": "Journal d'Activité",
-  "MainWindow.ClearLog": "Effacer le Journal",
-
-  "DataGrid.Enabled": "Activé",
-  "DataGrid.ProgramName": "Nom du Programme",
-  "DataGrid.Path": "Chemin",
+  "DataGrid.Actions": "Actions",
   "DataGrid.CheckInterval": "Intervalle de Vérif. (sec)",
+  "DataGrid.Edit": "⚙ Modifier",
+  "DataGrid.Enabled": "Activé",
+  "DataGrid.Path": "Chemin",
+  "DataGrid.ProgramName": "Nom du Programme",
   "DataGrid.RestartDelay": "Délai de Redémarrage (sec)",
   "DataGrid.Status": "Statut",
-  "DataGrid.Actions": "Actions",
-  "DataGrid.Edit": "⚙ Modifier",
-
-  "Status.Running": "En cours",
-  "Status.Stopped": "Arrêté",
-  "Status.Restarting": "Redémarrage",
-  "Status.Failed": "Échec",
-  "Status.Unknown": "Inconnu",
-
-  "Dialog.SelectProgram": "Sélectionner un Programme à Surveiller",
+  "Dialog.Apply": "Appliquer",
+  "Dialog.Cancel": "Annuler",
   "Dialog.ConfirmRemoval": "Confirmer la Suppression",
-  "Dialog.RemoveQuestion": "Êtes-vous sûr de vouloir supprimer '{0}' de la surveillance?",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
+  "Dialog.No": "Non",
   "Dialog.NoSelection": "Aucune Sélection",
+  "Dialog.OK": "OK",
+  "Dialog.RemoveQuestion": "Êtes-vous sûr de vouloir supprimer '{0}' de la surveillance?",
+  "Dialog.SaveTestEmail": "Enregistrer & Tester l'Email",
+  "Dialog.SelectProgram": "Sélectionner un Programme à Surveiller",
   "Dialog.SelectProgramFirst": "Veuillez d'abord sélectionner un programme à supprimer.",
   "Dialog.Yes": "Oui",
-  "Dialog.No": "Non",
-  "Dialog.OK": "OK",
-  "Dialog.Cancel": "Annuler",
-  "Dialog.Apply": "Appliquer",
-  "Dialog.SaveTestEmail": "Enregistrer & Tester l'Email",
-
-  "ProgramEdit.Title": "Modifier le Programme",
-  "ProgramEdit.AddTitle": "Ajouter un Programme",
-  "ProgramEdit.ProgramName": "Nom du Programme:",
-  "ProgramEdit.ExecutablePath": "Chemin de l'Exécutable:",
-  "ProgramEdit.Browse": "Parcourir...",
-  "ProgramEdit.Arguments": "Arguments:",
-  "ProgramEdit.WorkingDirectory": "Répertoire de Travail:",
-  "ProgramEdit.CheckInterval": "Intervalle de Vérification (secondes):",
-  "ProgramEdit.RestartDelay": "Délai de Redémarrage (secondes):",
-  "ProgramEdit.ValidationError": "Erreur de Validation",
-  "ProgramEdit.ProgramNameRequired": "Le nom du programme est obligatoire.",
-  "ProgramEdit.InvalidPath": "Veuillez sélectionner un fichier exécutable valide.",
-  "ProgramEdit.InvalidInterval": "L'intervalle de vérification doit être d'au moins 5 secondes.",
-  "ProgramEdit.InvalidDelay": "Le délai de redémarrage doit être d'au moins 1 seconde.",
-
-  "Settings.Title": "Paramètres",
-  "Settings.Logging": "Journalisation",
-  "Settings.EmailNotifications": "Notifications par Email",
-  "Settings.Application": "Application",
-  "Settings.About": "À propos",
-
-  "Settings.Logging.EnableFileLogging": "Activer la Journalisation",
-  "Settings.Logging.LogFilePath": "Chemin du Fichier Journal:",
-  "Settings.Logging.MinLogLevel": "Niveau de Journal Minimum:",
-  "Settings.Logging.MaxFileSize": "Taille Max du Fichier (Mo):",
-  "Settings.Logging.KeepLogsFor": "Conserver les Journaux (jours):",
-  "Settings.Logging.OpenFolder": "Ouvrir le Dossier des Journaux",
-
-  "Settings.Email.Enable": "Activer les Notifications par Email",
-  "Settings.Email.SmtpServer": "Serveur SMTP:",
-  "Settings.Email.SmtpPort": "Port SMTP:",
-  "Settings.Email.UseSsl": "Utiliser SSL/TLS",
-  "Settings.Email.SenderEmail": "Email de l'Expéditeur:",
-  "Settings.Email.SenderName": "Nom de l'Expéditeur:",
-  "Settings.Email.SenderPassword": "Mot de Passe de l'Expéditeur:",
-  "Settings.Email.RecipientEmail": "Email du Destinataire:",
-  "Settings.Email.NotifyOnRestart": "Notifier en Cas de Redémarrage Réussi",
-  "Settings.Email.NotifyOnFailure": "Notifier en Cas d'Échec",
-  "Settings.Email.TestEmail": "Envoyer un Email de Test",
-  "Settings.Email.TestSuccess": "Email de Test Envoyé",
-  "Settings.Email.TestSuccessMessage": "Email de test envoyé avec succès! Vérifiez votre boîte de réception.",
-  "Settings.Email.TestError": "Échec du Test Email",
-
-  "Settings.App.StartWithWindows": "Démarrer avec Windows",
-  "Settings.App.MinimizeToTray": "Réduire dans la Zone de Notification",
-  "Settings.App.StartMinimized": "Démarrer Réduit",
-  "Settings.App.Language": "Langue:",
-
-  "Settings.About.Version": "Version",
-  "Settings.About.Description": "Une application de bureau Windows qui surveille les programmes spécifiés et les redémarre automatiquement s'ils s'arrêtent.",
-  "Settings.About.GitHub": "Dépôt GitHub",
-  "Settings.About.Copyright": "Copyright © 2025 Antik79",
-  "Settings.About.License": "Sous licence MIT",
-  "Settings.About.TechStack": "Stack Technologique",
-  "Settings.About.Framework": "Framework: .NET 8.0",
-  "Settings.About.UI": "UI: WPF (Windows Presentation Foundation)",
-
-  "Export.Title": "Exporter les Journaux",
-  "Export.Filter": "Fichiers Texte (*.txt)|*.txt|Fichiers Journal (*.log)|*.log|Tous les Fichiers (*.*)|*.*",
-  "Export.Success": "Exportation Terminée",
-  "Export.LogsExported": "Journaux exportés avec succès!",
-  "Export.UILogsExported": "Journaux UI exportés avec succès!",
+  "Email.Body.Failed": "Le programme '{0}' s'est arrêté mais n'a pas pu être redémarré.",
+  "Email.Body.Path": "Chemin: {0}",
+  "Email.Body.Restarted": "Le programme '{0}' s'est arrêté et a été automatiquement redémarré.",
+  "Email.Body.Signature": "Ceci est un message automatique de RestartIt Moniteur d'Applications.",
+  "Email.Body.Time": "Heure: {0}",
+  "Email.Subject.Failed": "RestartIt: Échec du Redémarrage - {0}",
+  "Email.Subject.Restart": "RestartIt: Programme Redémarré - {0}",
   "Export.Error": "Erreur d'Exportation",
   "Export.ErrorMessage": "Erreur lors de l'exportation des journaux: {0}",
-
-  "Tray.ShowWindow": "Afficher la Fenêtre",
-  "Tray.Exit": "Quitter",
-  "Tray.MinimizedMessage": "Application réduite dans la zone de notification",
-
-  "Log.Started": "RestartIt démarré avec succès",
-  "Log.ShuttingDown": "Arrêt de RestartIt",
-  "Log.ProgramAdded": "Programme ajouté: {0}",
-  "Log.ProgramRemoved": "Programme supprimé: {0}",
-  "Log.ProgramUpdated": "Paramètres mis à jour pour: {0}",
-  "Log.SettingsUpdated": "Paramètres mis à jour",
-  "Log.MonitoringEnabled": "Surveillance activée pour: {0}",
-  "Log.MonitoringDisabled": "Surveillance désactivée pour: {0}",
+  "Export.Filter": "Fichiers Texte (*.txt)|*.txt|Fichiers Journal (*.log)|*.log|Tous les Fichiers (*.*)|*.*",
+  "Export.LogsExported": "Journaux exportés avec succès!",
+  "Export.Success": "Exportation Terminée",
+  "Export.Title": "Exporter les Journaux",
+  "Export.UILogsExported": "Journaux UI exportés avec succès!",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+  "Log.ErrorCheckingProcess": "Erreur lors de la vérification de {0}: {1}",
+  "Log.ErrorMonitoring": "Erreur lors de la surveillance de {0}: {1}",
+  "Log.FailedToRestart": "Échec du redémarrage de {0}: {1}",
   "Log.LogsExported": "Journaux exportés vers: {0}",
-  "Log.ProgramRestarted": "Programme redémarré: {0}",
-  "Log.RestartFailed": "Échec du redémarrage du programme: {0}",
+  "Log.MonitoringDisabled": "Surveillance désactivée pour: {0}",
+  "Log.MonitoringEnabled": "Surveillance activée pour: {0}",
   "Log.ProcessNotFound": "Processus introuvable: {0}",
   "Log.ProcessRunning": "Processus en cours: {0}",
+  "Log.ProgramAdded": "Programme ajouté: {0}",
   "Log.ProgramNotRunning": "{0} n'est pas en cours d'exécution. Redémarrage dans {1} secondes...",
-  "Log.ErrorMonitoring": "Erreur lors de la surveillance de {0}: {1}",
-  "Log.ErrorCheckingProcess": "Erreur lors de la vérification de {0}: {1}",
+  "Log.ProgramRemoved": "Programme supprimé: {0}",
+  "Log.ProgramRestarted": "Programme redémarré: {0}",
+  "Log.ProgramUpdated": "Paramètres mis à jour pour: {0}",
+  "Log.RestartFailed": "Échec du redémarrage du programme: {0}",
+  "Log.SettingsUpdated": "Paramètres mis à jour",
+  "Log.ShuttingDown": "Arrêt de RestartIt",
+  "Log.Started": "RestartIt démarré avec succès",
   "Log.SuccessfullyRestarted": "{0} redémarré avec succès",
-  "Log.FailedToRestart": "Échec du redémarrage de {0}: {1}",
-
-  "Email.Subject.Restart": "RestartIt: Programme Redémarré - {0}",
-  "Email.Subject.Failed": "RestartIt: Échec du Redémarrage - {0}",
-  "Email.Body.Restarted": "Le programme '{0}' s'est arrêté et a été automatiquement redémarré.",
-  "Email.Body.Failed": "Le programme '{0}' s'est arrêté mais n'a pas pu être redémarré.",
-  "Email.Body.Time": "Heure: {0}",
-  "Email.Body.Path": "Chemin: {0}",
-  "Email.Body.Signature": "Ceci est un message automatique de RestartIt Moniteur d'Applications."
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "MainWindow.ActivityLog": "Journal d'Activité",
+  "MainWindow.AddProgram": "➕ Ajouter un Programme",
+  "MainWindow.ClearLog": "Effacer le Journal",
+  "MainWindow.ExportLogs": "Exporter les Journaux",
+  "MainWindow.MonitoringActive": "Surveillance Active",
+  "MainWindow.MonitoringStopped": "Surveillance Arrêtée",
+  "MainWindow.Remove": "Supprimer",
+  "MainWindow.Settings": "Paramètres",
+  "ProgramEdit.AddTitle": "Ajouter un Programme",
+  "ProgramEdit.Arguments": "Arguments:",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.Browse": "Parcourir...",
+  "ProgramEdit.CheckInterval": "Intervalle de Vérification (secondes):",
+  "ProgramEdit.ExecutablePath": "Chemin de l'Exécutable:",
+  "ProgramEdit.InvalidDelay": "Le délai de redémarrage doit être d'au moins 1 seconde.",
+  "ProgramEdit.InvalidInterval": "L'intervalle de vérification doit être d'au moins 5 secondes.",
+  "ProgramEdit.InvalidPath": "Veuillez sélectionner un fichier exécutable valide.",
+  "ProgramEdit.ProgramName": "Nom du Programme:",
+  "ProgramEdit.ProgramNameRequired": "Le nom du programme est obligatoire.",
+  "ProgramEdit.RestartDelay": "Délai de Redémarrage (secondes):",
+  "ProgramEdit.Title": "Modifier le Programme",
+  "ProgramEdit.ValidationError": "Erreur de Validation",
+  "ProgramEdit.WorkingDirectory": "Répertoire de Travail:",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "Settings.About": "À propos",
+  "Settings.About.Copyright": "Copyright © 2025 Antik79",
+  "Settings.About.Description": "Une application de bureau Windows qui surveille les programmes spécifiés et les redémarre automatiquement s'ils s'arrêtent.",
+  "Settings.About.Framework": "Framework: .NET 8.0",
+  "Settings.About.GitHub": "Dépôt GitHub",
+  "Settings.About.License": "Sous licence MIT",
+  "Settings.About.TechStack": "Stack Technologique",
+  "Settings.About.UI": "UI: WPF (Windows Presentation Foundation)",
+  "Settings.About.Version": "Version",
+  "Settings.App.Language": "Langue:",
+  "Settings.App.MinimizeToTray": "Réduire dans la Zone de Notification",
+  "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
+  "Settings.App.StartMinimized": "Démarrer Réduit",
+  "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.StartWithWindows": "Démarrer avec Windows",
+  "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
+  "Settings.Application": "Application",
+  "Settings.Email.Enable": "Activer les Notifications par Email",
+  "Settings.Email.NotifyOnFailure": "Notifier en Cas d'Échec",
+  "Settings.Email.NotifyOnRestart": "Notifier en Cas de Redémarrage Réussi",
+  "Settings.Email.RecipientEmail": "Email du Destinataire:",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.SenderEmail": "Email de l'Expéditeur:",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.SenderName": "Nom de l'Expéditeur:",
+  "Settings.Email.SenderPassword": "Mot de Passe de l'Expéditeur:",
+  "Settings.Email.SmtpPort": "Port SMTP:",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SmtpServer": "Serveur SMTP:",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestEmail": "Envoyer un Email de Test",
+  "Settings.Email.TestError": "Échec du Test Email",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestSuccess": "Email de Test Envoyé",
+  "Settings.Email.TestSuccessMessage": "Email de test envoyé avec succès! Vérifiez votre boîte de réception.",
+  "Settings.Email.UseSsl": "Utiliser SSL/TLS",
+  "Settings.EmailNotifications": "Notifications par Email",
+  "Settings.Logging": "Journalisation",
+  "Settings.Logging.EnableFileLogging": "Activer la Journalisation",
+  "Settings.Logging.KeepLogsFor": "Conserver les Journaux (jours):",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
+  "Settings.Logging.LogFilePath": "Chemin du Fichier Journal:",
+  "Settings.Logging.MaxFileSize": "Taille Max du Fichier (Mo):",
+  "Settings.Logging.MinLogLevel": "Niveau de Journal Minimum:",
+  "Settings.Logging.OpenFolder": "Ouvrir le Dossier des Journaux",
+  "Settings.Title": "Paramètres",
+  "Status.Failed": "Échec",
+  "Status.Restarting": "Redémarrage",
+  "Status.Running": "En cours",
+  "Status.Stopped": "Arrêté",
+  "Status.Unknown": "Inconnu",
+  "Tray.Exit": "Quitter",
+  "Tray.MinimizedMessage": "Application réduite dans la zone de notification",
+  "Tray.ShowWindow": "Afficher la Fenêtre",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.PathValidationError": "Error validating path: {0}"
 }
